--- a/mod/thmod/localisation/english/apocalypse_l_english.yml
+++ b/mod/thmod/localisation/english/apocalypse_l_english.yml
@@ -171,10 +171,10 @@
  STARBASE_MODIFIERS:0 "การปรับเปลี่ยนของฐานอวกาศ"
  DEFENSE_QUEUE:0 "คิวระบบป้องกัน"
  SHIPYARD_QUEUE:0 "คิวอู่ต่อยาน"
- STARBASE_TRIGGER_HAS_NOT_MODULE:0 "Starbase has not module $COMPONENT|Y$"
+ STARBASE_TRIGGER_HAS_NOT_MODULE:0 "ฐานอวกาศไม่มีโมดูล $COMPONENT|Y$"
  STARBASE_TRIGGER_HAS_MODULE:0 "ฐานอวกาศมีโมดูล $COMPONENT|Y$"
- STARBASE_TRIGGER_HAS_NOT_BUILDING:0 "Starbase has not building $COMPONENT|Y$"
- STARBASE_TRIGGER_HAS_BUILDING:0 "Starbase has building $COMPONENT|Y$"
+ STARBASE_TRIGGER_HAS_NOT_BUILDING:0 "ฐานอวกาศไม่มีสิ่งปลูกสร้าง $COMPONENT|Y$"
+ STARBASE_TRIGGER_HAS_BUILDING:0 "ฐานอวกาศมีสิ่งปลูกสร้าง $COMPONENT|Y$"
  budget_group_starbase_maintenance:0 "ค่าบำรุงรักษาฐานอวกาศ"
  budget_group_starbase_produced:0 "ได้รับจากฐานอวกาศ"
  STARBASE_MAINENANCE_STATIONS:0 "ฐานอวกาศ: $VALUE|R2$"
@@ -244,8 +244,8 @@
  requires_nebula:0 "§Rต้องการระบบดาวที่อยู่ภายใน§Yเนบิวลา§!§!"
  requires_shattered_world: "§Rต้องมี §Y$pc_shattered$§! ในระบบดาว§!"
  requires_curator:0 "§Rต้องมี §YCurator Enclave§! ในระบบดาว§!"
- requires_curator_agreement:0 "§RRequires a §YDiplomatic Agreement§! with the local Curator Enclave.§!"
- requires_artist_agreement:0 "§RRequires a §YDiplomatic Agreement§! with the local Artisan Enclave.§!"
+ requires_curator_agreement:0 "§Rต้องมี §Yข้อตกลงทางการทูต§! กับ Curator Enclave ในท้องถิ่น§!"
+ requires_artist_agreement:0 "§Rต้องมี §Yข้อตกลงทางการทูต§! กับ Artisan Enclave ในท้องถิ่น§!"
  requires_artisans:0 "§Rต้องมี §YArtisan Troupe Enclave§! ในระบบดาว§!"
  requires_technology_gateway_activation:0 "$TRIGGER_FAIL$ต้องใช้เทคโนโลยี £physics£ §Y$tech_gateway_activation$§!"
  requires_technology_gateway_construction:0 "$TRIGGER_FAIL$ต้องใช้เทคโนโลยี £physics£ §Y$tech_gateway_construction$§!"
@@ -262,7 +262,7 @@
  name_list_HUMAN1:0 "Humans (UNE)"
  name_list_HUMAN2:0 "Humans (CM)"
  name_list_HUMAN3:0 "Humans (SPQR)"
- leviathans.300.g:0 "We would like your help to found an Art College."
+ leviathans.300.g:0 "เราต้องการความช่วยเหลือจากคุณในการก่อตั้งวิทยาลัยศิลปะ"
  leviathans.340.name:0 "วิทยาลัยศิลปะ"
  leviathans.340.desc:1 "Brilliant! We were just about to suggest the very same thing to you! If you establish this institution on the starbase in the system you share with us, we shall send some of our finest artists to serve there as teachers."
  leviathans.340.tooltip:0 "We can now build the §HArt College§! Starbase Building in the §Y[artist_system.GetName]§! system."
@@ -331,7 +331,7 @@
  FLEET_TEMPLATE_MILITARY_POWER:0 "£military_power£ $POWER_STRING$"
  FLEET_TEMPLATE_POWER_MAX_UNREACHED_VALUE_FORMAT:0 "$CURRENT_STRING|R$"
  FLEET_TEMPLATE_POWER_MAX_REACHED_VALUE_FORMAT:0 "$CURRENT_STRING$"
- FLEET_TEMPLATE_COMMAND_LIMIT_REACHED: "Command Limit too low to add this ship."
+ FLEET_TEMPLATE_COMMAND_LIMIT_REACHED: "ขีดจำกัดคำสั่งต่ำเกินไปที่จะเพิ่มยานลำนี้"
  FLEET_TEMPLATE_FEDERATION_CAPACITY_REACHED: "Federation Naval Capacity too low to add this ship."
  FLEET_TEMPLATE_GDF_CAPACITY_REACHED: "Galactic Defense Force Naval Capacity too low to add this ship."
  FLEET_TEMPLATE_IMPERIAL_ARMADA_CAPACITY_REACHED: "Imperial Armada Naval Capacity too low to add this ship."
