--- a/mod/thmod/localisation/english/distant_stars_l_english.yml
+++ b/mod/thmod/localisation/english/distant_stars_l_english.yml
@@ -1540,13 +1540,13 @@
  story.332.b:0 "...and a strange device..."
  CRYSTALS_PROJECT:0 "Crystalline Study"
  CRYSTALS_PROJECT_DESC:0 "$CRYSTALS_1_PROJECT_DESC$"
- CRYSTALS_PACIFICATION_PROJECT:0 "Crystalline Pacification"
+ CRYSTALS_PACIFICATION_PROJECT:0 "กระบวนการสันติภาพกับผลึกเอนทิตี"
  CRYSTALS_PACIFICATION_PROJECT_DESC:0 "The Crystalline Entities observed in some systems are volatile and potentially dangerous. "
  DRONES_PROJECT:0 "Drone Study"
  DRONES_PROJECT_DESC:0 "$DRONES_1_PROJECT_DESC$"
  AMOEBAS_PROJECT:0 "การศึกษาอะมีบาอวกาศ"
  AMOEBAS_PROJECT_DESC:0 "$AMOEBAS_1_PROJECT_DESC$"
- AMOEBAS_PACIFICATION_PROJECT:0 "Amoeboid Pacification"
+ AMOEBAS_PACIFICATION_PROJECT:0 "กระบวนการสันติภาพกับอะมีบา"
  AMOEBAS_PACIFICATION_PROJECT_DESC:0 "Something about our fleets seems to agitate the Space Amoebas. If we could somehow isolate what this something is, we could reduce Amoeba aggression or possibly completely mask our ships from their senses."
  CLOUDS_PROJECT:0 "Cloud Study"
  CLOUDS_PROJECT_DESC:0 "$CLOUDS_1_PROJECT_DESC$"
@@ -1554,11 +1554,11 @@
  crystal_hunting_buff_desc:0 "The shattered remains of Crystalline Entities are automatically salvaged after battle, bringing in £minerals£ §G500§! for every fleet destroyed."
  crystal_focus:0 "Crystal Focus"
  crystal_focus_desc:0 "Improved transmission mediums modeled after the Crystalline Entities' unique internal structures minimize resistive losses in energy production and distribution."
- pacified_crystals:0 "Crystalline Pacification"
+ pacified_crystals:0 "กระบวนการสันติภาพกับผลึกเอนทิตี"
  pacified_crystals_desc:0 "Short-wave broadcasts at certain frequencies effectively disguise our fleets as fellow Crystalline Entities, and the spaceborne creatures no longer recognize us as a threat."
  amoeba_hunting_buff:0 "Amoeba Hunter"
  amoeba_hunting_buff_desc:0 "Amoeba carcasses are rounded up after battle and their internal organs harvested for valuable organic compounds, bringing in £energy£ §G1000§! for every fleet destroyed."
- pacified_amoebas:0 "Amoeboid Pacification"
+ pacified_amoebas:0 "กระบวนการสันติภาพกับอะมีบา"
  pacified_amoebas_desc:0 "Fleets regulate radiation venting when approaching Space Amoebas, and the spaceborne creatures no longer recognize us as a threat."
  drone_hunting_buff:0 "Drone Destroyer"
  drone_hunting_buff_desc:0 "The Mining Drones are obviously mass-produced. A weakness found in one is a weakness found in all."
