--- a/mod/thmod/localisation/english/events_l_english.yml
+++ b/mod/thmod/localisation/english/events_l_english.yml
@@ -42,7 +42,7 @@
  SCRAPIT:0 "Scrap it for materials."
  OOPS:0 "Oops..."
  GOODBYE:0 "ลาก่อน"
- DEAL:0 "It's a deal!"
+ DEAL:0 "ตกลง!"
  NODEAL:0 "ไม่ตกลง"
  TOOPOOR:0 "We cannot afford that."
  SCUM:0 "Xeno scum."
