--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -939,7 +939,7 @@
  exclusive_resolution_already_active:0 "£trigger_no£ Another resolution is already active"
  environment_technology:0 "สิ่งแวดล้อมและเทคโนโลยี"
  commerce_industry:0 "การค้าและอุตสาหกรรม"
- defense_war:0 "การป้องกันตัวเองและสงคราม"
+ defense_war:0 "การป้องกันตนเองและสงคราม"
  politics_culture:0 "การเมืองและค่านิยมความเชื่อ"
  galactic_focus:0 "ลำดับความสำคัญของกาแล็กติก"
  resolution_denounced:0 "ถูกบอกเลิก"
@@ -1216,7 +1216,7 @@
  resolution_galacticreforms_permanent_seat_desc:0 "The Galactic Community has flourished under the benevolent leadership of this empire. We should give them a permanent seat on the council."
  resolution_galacticreforms_revoke_permanent_seat:0 "ยกเลิกที่นั่งถาวรในสภา"
  resolution_galacticreforms_revoke_permanent_seat_desc:0 "Galactic Council members should be held accountable for their actions during regular elections. This empire should not have a permanent seat."
- requires_something_illegal:0 "$TRIGGER_FAIL$Before any sanctions can be declared, a resolution must be passed that can cause an empire to be denounced or to be in breach of Galactic Law."
+ requires_something_illegal:0 "$TRIGGER_FAIL$ก่อนที่จะมีการประกาศการลงโทษหรือคว่ำบาตรใดๆ จะต้องมีการผ่านมติที่สามารถประณามหรือลงโทษจักรวรรดิที่ละเมิดกฎหมายกาแล็กติกเสียก่อน"
  resolution_category_sanctions_environment_technology:0 "บทลงโทษ: $environment_technology$"
  resolution_category_sanctions_commerce_industry:0 "บทลงโทษ: $commerce_industry$"
  resolution_category_sanctions_defense_war:0 "บทลงโทษ: $defense_war$"
@@ -1291,7 +1291,7 @@
  resolution_sanctions_administrative_3:0 "มาตรการลงโทษทางปกครองสูงสุด"
  resolution_sanctions_administrative_3_desc:1 "Extreme measures must be taken to isolate and ostracize those who will not obey the will of the [global_event_country.GetGalCommunityOrGalImperium]."
  galactic_focus_pass_a_resolution:0 "ผ่านมติ"
- galactic_focus_pass_a_resolution_desc:1 "Prove to the naysayers that the [global_event_country.GetGalCommunityOrGalImperium] can work together."
+ galactic_focus_pass_a_resolution_desc:1 "พิสูจน์ให้ผู้ที่ไม่เห็นด้วยเห็นว่า [global_event_country.GetGalCommunityOrGalImperium] สามารถทำงานร่วมกันได้"
  galactic_community_resolution_passed:4 "$TRIGGER_FAIL$ผ่านการลงมติใน [global_event_country.GetGalCommunityOrGalImperium]"
  galactic_focus_form_the_galactic_market:0 "$market_founding_chain_title$"
  galactic_focus_form_the_galactic_market_desc:0 "$market_founding_chain_desc$"
@@ -1450,7 +1450,7 @@
  CHANGE_FEDERATION_TYPE_CURRENT_DESC:0 "Current federation type selected"
  RIGHT_CLICK_TO_VIEW_PROPOSED:0 "§HClick a proposed Resolution in the queue to view its details§!"
  PROPOSE_RESOLUTION_NAME:0 "เสนอญัตติ!"
- PROPOSE_RESOLUTION_DETAILS:0 "Resolutions can be proposed from the Resolutions Tab, adding it to the Proposal Queue on the left. From list we can choose to support a Resolution, adding our Diplomatic Weight to it.\n\nThe Resolution with the most support will eventually move onto the Senate Floor for the final vote."
+ PROPOSE_RESOLUTION_DETAILS:0 "สามารถเสนอญัตติได้จากแท็บญัตติโดยจะเพิ่มลงในคิวญัตติทางด้านซ้าย เราสามารถเลือกญัตติที่จะสนับสนุนและสามารถเพิ่มน้ำหนักทางการทูตเข้าไปด้วยได้\n\nญัตติที่ได้รับการสนับสนุนมากที่สุดจะถูกส่งไปยังวุฒิสภาเพื่อลงมติขั้นตอนสุดท้าย"
  PROPOSE_RESOLUTION_GREETINGS:0 "ยินดีต้อนรับสู่ประชาคมกาแล็กติก!"
  DIPLOMATIC_ACTION_TITLE:0 "กิจกรรมทางการทูต"
  Envoy_Action:0 "แต่งตั้งทูต"
