--- a/mod/thmod/localisation/english/grand_archive_l_english.yml
+++ b/mod/thmod/localisation/english/grand_archive_l_english.yml
@@ -2123,7 +2123,7 @@
  MOD_ATTACHED_SPACE_FAUNA_COMPONENT_FIRE_RATE_MULT: "Space Fauna Ship Component and Mutation Fire Rate"
  ATTACHED_SPACE_FAUNA_COMPONENT_TT_FIRE_RATE_DECREASED: "$MOD_ATTACHED_SPACE_FAUNA_COMPONENT_FIRE_RATE_MULT$: §R-$VALUE|%0$§!"
  ATTACHED_SPACE_FAUNA_COMPONENT_TT_FIRE_RATE_INCREASED: "$MOD_ATTACHED_SPACE_FAUNA_COMPONENT_FIRE_RATE_MULT$: §G+$VALUE|%0$§!"
- CREATURE_DESIGNER: "Space Fauna"
+ CREATURE_DESIGNER: "สัตว์อวกาศ"
  PICK_CREATURE_SIZE: "Pick Creature Size"
  CREATURE_DESIGN_RIGHT_CLICK_TO_CANCEL_MUTATION_PAINT: "§GRight-click to remove selected Mutation§!"
  CREATURE_MUTATIONS_FILTER_OBSOLETE: "Hide Obsolete Mutations"
@@ -2144,7 +2144,7 @@
  defensive_mutation_type: "Defensive Mutations"
  aux_mutation_type: "Special Mutations"
  TECH_UNLOCK_MUTATION: "§HUnlocks Mutation:§! $NAME$"
- OPEN_DESIGNER: "Open Designer"
+ OPEN_DESIGNER: "ออกแบบ"
  UNIQUE_MUTATION_DUPLICATE: "§R$TRIGGER_FAIL$ Unique mutations cannot be applied more than once ($MUTATION$).§!"
  tech_controlled_mutations_2_title: "§HUnlocks Feature:§! Unique Mutations"
  tech_controlled_mutations_2_tooltip: "§HUnique Mutations§!\nUnique Mutations are powerful mutations that can be applied only once and can sometimes be limited to a specific kind of Space Fauna. More Unique Mutations can be discovered from cloning and hunting."
