--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -62,7 +62,7 @@
  TRAIT_THRIFTY_EFFECT:0 "£trade_value£ มูลค่าการค้าจาก £job£ งาน: §G+25%§!"
  TRAIT_LITHOID_EFFECT:3 "แทนที่ค่าบำรุงรักษาที่เป็น $r_food$ ด้วย $r_minerals$\n\n$MOD_POP_GROWTH_SPEED$: §R-25%§!\n$MOD_POP_ASSEMBLY_SPEED$: §R-25%§!\n$MOD_POP_ENVIRONMENT_TOLERANCE$: §G+50%§!\n$MOD_ARMY_HEALTH$: §G+50%§!\n$MOD_LEADER_LIFESPAN_ADD$: §G+50§! ปี"
  NO_SPECIES_CAN_INHABIT:0 "§RThere is no Species in our empire that can inhabit this type of planet§!"
- POP_HABITABILITY_TOO_LOW:0 "§RPlanet Habitability for Pop is below §R20%§!.§!"
+ POP_HABITABILITY_TOO_LOW:0 "§Rการอยู่อาศัยได้ของดาวเคราะห์สำหรับประชากรต่ำกว่า §R20%§!§!"
  POP_MAY_NOT_LIVE_ON_PLANET:0 "§RSpecies Rights for Pop does not permit residence on this planet.§!"
  CANNOT_ENLIGHTEN_FANATIC_XENOPHOBE:1 "Not possible to technologically enlighten pre-FTLs that are §H$ethic_fanatic_xenophobe$§!."
  FOOD_NO_NEED:0 "§YWe have no Pops that require Food to sustain them.§!"
@@ -745,7 +745,7 @@
  HABITABLITIY_VALUE:1 "ค่าการอยู่อาศัยได้: $VALUE$ ($SPECIES|Y$)"
  HABITABILITY_FLOOR_DESCRIPTION:0 "$STRING$: $VALUE$"
  HABITABILITY_CEIL_DESCRIPTION:0 "$STRING$: $VALUE$"
- pop_habitability:0 "ดาวเคราะห์ที่อยู่อาศัยได้"
+ pop_habitability:0 "การอยู่อาศัยได้ของดาวเคราะห์"
  TERRAFORM_RESULT:0 "อยู่อาศัยได้: $HABITABILITY$"
  SIZE:0 "ขนาด"
  SCIENTIST_REQUIRED:0 "จำเป็นต้องมีนักวิทยาศาสตร์"
@@ -1160,7 +1160,7 @@
  COUNTRY_FALLEN_EMPIRE:0 "จักรวรรดิเก่าแก่ทรงพลัง"
  COUNTRY_FALLEN_EMPIRE_DESC:0 "Fallen Empires are the stagnant remnants of the galactic powers of old. Though mere shadows of what they once were, they still possess incredibly advanced technology. Galactic affairs are of little interest to them, and they rarely venture beyond their own space."
  COUNTRY_AWAKENED_FALLEN_EMPIRE:0 "จักรวรรดิฟอลเล็น (สถานะ: ตื่นขึ้น)"
- COUNTRY_AWAKENED_FALLEN_EMPIRE_DESC:1 "จักรวรรดิที่หลับใหลคือ['concept_fallen_empires']ที่ตื่นขึ้นจากความซบเซามานานหลายศตวรรษและตอนนี้มีความต้องการยึดครองกาแล็กซีอีกครั้ง พวกเขาเป็นเพื่อนบ้านที่อันตรายและมีแนวโน้มที่จะปฏิบัติต่อจักรวรรดิที่ก้าวหน้าน้อยกว่าเป็นหุ่นเชิดหรือเป้าหมายของการพิชิต"
+ COUNTRY_AWAKENED_FALLEN_EMPIRE_DESC:1 "จักรวรรดิที่ตื่นขึ้นคือ['concept_fallen_empires']ที่ตื่นขึ้นจากการหลับใหลมานานหลายศตวรรษและตอนนี้มีความต้องการยึดครองกาแล็กซีอีกครั้ง พวกเขาเป็นเพื่อนบ้านที่อันตรายและมีแนวโน้มที่จะปฏิบัติต่อจักรวรรดิที่ก้าวหน้าน้อยกว่าเป็นหุ่นเชิดหรือเป้าหมายของการพิชิต"
  fallen_empire:0 "$COUNTRY_FALLEN_EMPIRE$"
  awakened_fallen_empire:0 "$COUNTRY_AWAKENED_FALLEN_EMPIRE$"
  INDEPENDENT:0 "เป็นอิสระ"
@@ -1276,7 +1276,7 @@
  BUILD_MEGASTRUCTURE_SPACE_TARGET_DESC:1 "สร้าง §Yสิ่งก่อสร้างขนาดมหึมา§! ที่นี่"
  BUILD_MEGASTRUCTURE_PLANET_TARGET_DESC:1 "สร้าง §Yสิ่งก่อสร้างขนาดมหึมา§! รอบๆ ดาวดวงนี้"
  BUILD_MEGASTRUCTURE_SPACE_TARGET_CLICK_DESC: "§GClick outside a system's gravity well to build $MEGASTRUCTURE$§!"
- BUILD_MEGASTRUCTURE_PLANET_TARGET_CLICK_DESC: "§GClick a stellar body to build $MEGASTRUCTURE$§!"
+ BUILD_MEGASTRUCTURE_PLANET_TARGET_CLICK_DESC: "§Gคลิกที่ดาวฤกษ์เพื่อสร้าง $MEGASTRUCTURE$§!"
  BUILD_MEGASTRUCTURE_ORDER_COST:0 "ค่าใช้จ่าย: $VAL|Y2$"
  BUILD_MEGASTRUCTURE_ORDER_MAINTENANCE:0 "ค่าบำรุงรายเดือน: £energy£ $VAL|Y2$"
  MEGASTRUCTURE_DISMANTLE_DIALOG_TITLE: "รื้อถอนสิ่งก่อสร้างขนาดมหึมา?"
@@ -1542,7 +1542,7 @@
  ACHIEVEMENT_TOOLTIP_YES:0 "§Gได้รับรางวัลความสำเร็จในเกมนี้§!"
  ACHIEVEMENT_TOOLTIP_NO:0 "§Rไม่ได้รับรางวัลความสำเร็จในเกมนี้§!"
  ACHIEVEMENT_TOOLTIP_IRONMAN:0 "§Rไม่ได้เปิดโหมดไอรอนแมน§!"
- ACHIEVEMENT_TOOLTIP_CHECKSUM:0 "§RChecksum is Modified§!"
+ ACHIEVEMENT_TOOLTIP_CHECKSUM:0 "§RChecksum เปลี่ยน§!"
  ACHIEVEMENT_ELIGIBLE:0 "§Gเกมนี้มีสิทธิ์ได้รับรางวัลความสำเร็จ§!"
  ACHIEVEMENT_NOT_ELIGIBLE:1 "§Iเกมนี้ไม่มีสิทธิ์ได้รับรางวัลความสำเร็จ§!"
  NUM_FALLEN_EMPIRES:2 "จักรวรรดิฟอลเล็น"
@@ -2835,16 +2835,16 @@
  starburst:0 "ดาวกระจาย"
  cartwheel:0 "กงเกวียน"
  spoked:0 "ซี่ล้อรถ"
- GALAXY_SHAPE_ELLIPTICAL_DESC: "§I$elliptical$:§! A simple round galaxy of evenly distributed stars."
- GALAXY_SHAPE_RING_DESC: "§I$ring$:§! A round galaxy with more space around the galactic core."
- GALAXY_SHAPE_SPIRAL_2_DESC: "§I$spiral_2$:§! This galaxy has two arms curving out from the galactic core."
- GALAXY_SHAPE_SPIRAL_3_DESC: "§I$spiral_3$:§! This galaxy has three arms curving out from the galactic core."
- GALAXY_SHAPE_SPIRAL_4_DESC: "§I$spiral_4$:§! This galaxy has four arms curving out from the galactic core."
- GALAXY_SHAPE_SPIRAL_6_DESC: "§I$spiral_6$:§! This galaxy has six arms curving out from the galactic core."
- GALAXY_SHAPE_BAR_DESC: "§I$bar$:§! The galaxy is split into two thick spiral arms, with only a few connections."
- GALAXY_SHAPE_STARBURST_DESC: "§I$starburst$:§! Several parallel arms whirl out from the galactic core."
- GALAXY_SHAPE_CARTWHEEL_DESC: "§I$cartwheel$:§! Several thin arms create this hybrid between a spiral and ring galaxy."
- GALAXY_SHAPE_SPOKED_DESC: "§I$spoked$:§! This galaxy is split into 'slices' that are mostly separated from one another."
+ GALAXY_SHAPE_ELLIPTICAL_DESC: "§I$elliptical$:§! กาแล็กซีทรงกลมเรียบง่ายที่มีดาวฤกษ์กระจายอย่างสม่ำเสมอ"
+ GALAXY_SHAPE_RING_DESC: "§I$ring$:§! กาแล็กซีทรงกลมที่มีพื้นที่รอบแกนกาแล็กซีมากขึ้น"
+ GALAXY_SHAPE_SPIRAL_2_DESC: "§I$spiral_2$:§! กาแล็กซีนี้มีแขนสองแขนที่โค้งออกมาจากแกนกลางกาแล็กซี"
+ GALAXY_SHAPE_SPIRAL_3_DESC: "§I$spiral_3$:§! กาแล็กซีนี้มีแขนสามแขนที่โค้งออกมาจากแกนกลางกาแล็กซี"
+ GALAXY_SHAPE_SPIRAL_4_DESC: "§I$spiral_4$:§! กาแล็กซีนี้มีแขนสี่แขนที่โค้งออกมาจากแกนกลางกาแล็กซี"
+ GALAXY_SHAPE_SPIRAL_6_DESC: "§I$spiral_6$:§! กาแล็กซีนี้มีแขนหกแขนที่โค้งออกมาจากแกนกลางกาแล็กซี"
+ GALAXY_SHAPE_BAR_DESC: "§I$bar$:§! กาแล็กซีถูกแบ่งออกเป็นแขนเกลียวหนาสองแขน โดยมีจุดเชื่อมต่อเพียงเล็กน้อย"
+ GALAXY_SHAPE_STARBURST_DESC: "§I$starburst$:§! แขนคู่ขนานหลายแขนหมุนวนออกจากแกนกาแล็กซี"
+ GALAXY_SHAPE_CARTWHEEL_DESC: "§I$cartwheel$:§! มีแขนบางๆจำนวนมากสร้างลูกผสมระหว่างดาราจักรชนิดก้นหอยและวงแหวน"
+ GALAXY_SHAPE_SPOKED_DESC: "§I$spoked$:§! กาแล็กซีนี้แบ่งออกเป็น 'ส่วน' ซึ่งส่วนใหญ่แยกออกจากกัน"
  GALAXY_SIZE:0 "ขนาดกาแล็กซี"
  TEMPLATE_NUM_STARS:0 " ($STARS$ ดวง)"
  RANDOMIZED_SETTING_NUM:0 "$MIN$-$MAX$"
@@ -3252,7 +3252,7 @@
  d_assimilators_ruins_desc:0 "This once major settlement is now a crumbling ruin, occupied only by the decaying bodies of those organics that chose self-termination rather than be assimilated."
  d_former_battlefield:0 "£blocker£ Battlefield Remnants"
  d_former_battlefield_desc:0 "Tens of thousands of burnt war machines and the twisted skeletal remains of organic soldiers litter the ground at this former battlefield. Residual pockets of radiation interferes with most electronics."
- d_strip_mine:0 "£blocker£ Abandoned Strip Mine"
+ d_strip_mine:0 "£blocker£ เหมืองเปิดหน้าดินร้าง"
  d_strip_mine_desc:0 "This area was heavily strip mined in the past, by older and more primitive machine models that unfortunately were not programmed to take future development of the region into account."
  d_unsupervised_settlement:0 "£blocker£ Unsupervised Settlement"
  d_unsupervised_settlement_desc:0 "A pocket of organic society on this world that still exists outside of machine supervision. Violence, disease and starvation run rampant inside the settlement's walls, whose inhabitants have regressed technologically by several centuries."
@@ -7060,8 +7060,8 @@
  NEXT_ROTATION:0 "การหมุนเวียนครั้งต่อไป"
  ELECTION_VIEW_TITLE:0 "การเลือกผู้ปกครอง"
  ELECTION_VIEW_DESCRIPTION:4 "การเลือกตั้ง $RULER_TITLE|Y$ ใหม่กำลังดำเนินการอยู่!\nใช้ £unity£§Yเอกภาพ§! เพื่อเลือกผู้สมัครคนใดคนหนึ่ง"
- ELECTION_VIEW_DESCRIPTION_RANDOM:0 "$ELECTION_VIEW_DESCRIPTION$ If we do not interfere, a random candidate will be elected."
- ELECTION_VIEW_DESCRIPTION_TOP_CANDIDATE:0 "$ELECTION_VIEW_DESCRIPTION$ If we do not interfere, the topmost candidate will be elected."
+ ELECTION_VIEW_DESCRIPTION_RANDOM:0 "$ELECTION_VIEW_DESCRIPTION$ หากเราไม่แทรกแซงจะมีการเลือกผู้สมัครแบบสุ่ม"
+ ELECTION_VIEW_DESCRIPTION_TOP_CANDIDATE:0 "$ELECTION_VIEW_DESCRIPTION$ ถ้าเราไม่แทรกแซง ผู้สมัครที่มีอันดับสูงสุดจะได้รับเลือก"
  ELECTION_SELECTED_WINNER:0 "เราเลือก §H$SELECTED_WINNER$§! เป็นผู้ปกครองคนต่อไป"
  ELECTION_SELECTED_WINNER_PRE_RULER_LOCATION:1 "เราเลือก §H$SELECTED_WINNER$§! ที่เคยเป็น $PRE_RULER_TITLE$ ของ §H$PRE_RULER_LOCATION$§! เป็นผู้ปกครองคนต่อไป"
  ELECTION_RE_ELECTED:0 "We have re-elected our current Ruler, §H$SELECTED_WINNER$§!."
@@ -12388,10 +12388,10 @@
  decision_dangerous_wildlife: "Hostile Fauna Removal"
  decision_dangerous_wildlife_desc: "With advancements in terraforming technology, it is now possible to remove hostile species from a planet without disrupting the biosphere."
  decision_dangerous_wildlife_effects_short: "The §Y$dangerous_wildlife$§! modifier will be removed from this planet."
- decision_stripmine_planet: "Strip Mine Planet"
+ decision_stripmine_planet: "ดาวเคราะห์เหมืองเปิดหน้าดิน"
  decision_stripmine_planet_desc: "The rare and valuable resources on this planet are too beneficial to ignore. By stripping most of the biosphere, we can enable our miners to extract significantly more of these resources."
  decision_stripmine_planet_tooltip: "§RRemoves§! all §YFood§! and §YEnergy§! deposits."
- d_planet_stripmine: "Strip Mine Network"
+ d_planet_stripmine: "เครือข่ายเหมืองเปิดหน้าดิน"
  d_planet_stripmine_desc: "This planet has been stripped of most of the biosphere, enabling miners to extract significantly more resources."
  coop_current_event_option_selected_by_other: "§RThis event option has already been selected by $HUMAN_NAME|H$. Selecting this option will not trigger its effects again.§!"
  coop_diplomacy_occupied_by_other: "Diplomatic channels are currently being utilized by $HUMAN_NAME|H$."
@@ -12422,10 +12422,10 @@
  confirm_unassign_delegate_desc: "The leader will stop representing our interests in the §YGalactic Community§! and will await a new assignment."
  unassign_delegate_tooltip: "$PLANET_VIEW_LEADER_UNASSIGN$"
  LEADER_DELEGATE_GALCOM: "Emissary in the Galactic Community"
- ASSIGN_DELEGATE: "Assign an Emissary"
+ ASSIGN_DELEGATE: "แต่งตั้งผู้แทน"
  ASSIGN_DELEGATE_TOOLTIP: "§H$ASSIGN_DELEGATE$§!\n§GClick to open the Assign Leader view§!"
  ASSIGN_DELEGATE_NOT_MEMBER_TOOLTIP: "§H$ASSIGN_DELEGATE$§!\n§RYou need to be a member of the Galactic Community to assign an emissary§!"
- ASSIGN_DELEGATE_DELAYED: "§EAssign an Emissary to increase your §!§HDiplomatic Weight§!"
+ ASSIGN_DELEGATE_DELAYED: "§Eการแต่งตั้งผู้แทนจะช่วยเพิ่ม §!§Hน้ำหนักทางการทูต§! ของคุณ"
  confirm_unassign_representative: "$confirm_unassign_delegate$"
  confirm_unassign_representative_desc: "The leader will stop representing our interests in the $FEDERATION|Y$ and will await a new assignment."
  unassign_representative_tooltip: "$PLANET_VIEW_LEADER_UNASSIGN$"
@@ -12452,8 +12452,8 @@
  STAR_SYSTEM_IS_NOT:0 "ระบบดาวไม่ใช่ §T$STAR_SYSTEM$§!"
  USING_NAME_LIST:0 "ใช้รายชื่อหมวดหมู่ §Y$CATEGORY$§!"
  NOT_USING_NAME_LIST:0 "ไม่ใช้รายชื่อหมวดหมู่ §Y$CATEGORY$§!"
- HIDE_UNOWNED_CONTENT:0 "ซ่อน Content ที่ไม่ได้เป็นเจ้าของ"
- MOD_VERSION:0 "Mod v0.75.0, Update 02/11/2024"
+ HIDE_UNOWNED_CONTENT:0 "ซ่อนเนื้อหาที่ไม่ได้เป็นเจ้าของ"
+ MOD_VERSION:0 "Mod v0.75.1, Update 07/11/2024"
  MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - Cosmic Storm -> พายุคอสมิก,พายุอวกาศ \n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons, Overlord, The Machine Age, Cosmic Storms \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
