--- a/mod/thmod/localisation/english/leviathans_l_english.yml
+++ b/mod/thmod/localisation/english/leviathans_l_english.yml
@@ -230,24 +230,24 @@
  leviathans.163b.desc:0 "You will find that Muutagans have very long memories, [Root.GetSpeciesName]. We never forget a slight."
  leviathans.163c.desc:0 "We will never trust the [Root.GetName] again."
  leviathans.295.desc:0 "A visitor! This is a joyous occasion indeed! Oh, forgive my manners. I believe introductions are in order. We are the Artisan Troupe.\n\nOur members have dedicated their lives to the pursuit of art, music, culture and all the other things which makes existence bearable to a sapient being. Please, if you would like to share in the wonder of our creations, do not hesitate to contact us!"
- leviathans.300.name:0 "The Artisan Troupe"
+ leviathans.300.name:0 "Artisan Troupe"
  leviathans.300.desc:3 "Greetings! I, the headmaster of the Artisan Troupe, wish you a creative day.\n\nWhat can we do you for? Perhaps produce a work of art for you to enjoy? Or maybe you wish to sponsor our enclave in its creation of otherworldly beauty?"
  leviathans.300a.desc:0 "Hm? Oh, please excuse my reverie. Sometimes this muse of mine is simply... overpowering. Is there anything else we can do for you?"
- leviathans.300b.desc:0 "Have you ever stopped to wonder at the sheer majesty of it all? Here we are, and there you are. What fantastic odds! I feel a ballad coming on."
+ leviathans.300b.desc:0 "คุณเคยหยุดสงสัยถึงความยิ่งใหญ่อลังการของสิ่งทั้งหมดนี้หรือไม่? นี่ไง เรามาแล้ว และนั่นไง โอกาสที่เหลือเชื่อ! ฉันรู้สึกว่าบทเพลงกำลังจะมา"
  leviathans.300c.desc:0 "Yes? Hello? Ah, it's you! Forgive me; I was stuck chasing a particularly elusive stanza. How can I help?"
- leviathans.300.a:1 "We want to commission an §Yart piece§!."
+ leviathans.300.a:1 "เราอยากจ้างให้สร้าง §Yงานศิลปะชิ้นหนึ่ง§!"
  leviathans.300.a.reply:0 "Sadly we cannot offer any more, lest we come to believe that you didn't appreciate the ones you already purchased. We have our integrity to think about, you see."
- leviathans.300.b:1 "We wish to become your §Ypatron§!."
- leviathans.300.b.stop:1 "We wish to §Ycancel our patronage§!."
- leviathans.300.b.stop.tooltip:0 "§RStops§! the monthly £opinion£ Opinion gain\n\n"
+ leviathans.300.b:1 "เราหวังว่าจะได้เป็น §Yผู้อุปถัมภ์§! ของคุณ"
+ leviathans.300.b.stop:1 "เราต้องการ §Yยกเลิกการอุปถัมภ์§!"
+ leviathans.300.b.stop.tooltip:0 "§Rหยุด§! การเพิ่มขึ้นของ £opinion£ ทัศนคติ ต่อเดือน\n\n"
  leviathans.300.b.reply:2 "Oh, I see. That is unfortunate, [root.GetSpeciesAdj], but we thank you for your initial support.\n\nGoodbye."
- leviathans.300.c:1 "Organize a §Yfestival§! across our worlds."
+ leviathans.300.c:1 "จัดงาน §Yเทศกาล§! ทั่วทั้งดาวเรา"
  leviathans.300.c.allow:0 "ต้องการ §YArtisan Troupe§! ให้มี:\n£opinion£ ทัศนคติ +50"
- leviathans.300.c.outofstock:2 "We may only host one §YFestival of Worlds§! every 20 years."
- leviathans.300.d:1 "§YTell us more§! about your troupe."
+ leviathans.300.c.outofstock:2 "เราอาจจัดงาน §YFestival of Worlds§! ได้เพียงครั้งเดียวในทุก 20 ปี"
+ leviathans.300.d:1 "§Yบอกเราเพิ่มเติม§! เกี่ยวกับคณะของคุณ"
  leviathans.300.d.reply:1 "We are the Artisan Troupe. The troupe consists of several stations inhabited by creatives from many worlds, all unified in the desire to create new beauty in these safe havens. They bring their ideas and methods from all around the galaxy, and together we uncover the ultimate expressions of the self!\n\nWe provide many services to those who wish to enjoy art. If you help sponsor our work we might even be willing to organize larger events for your people!"
- leviathans.300.e:0 "What else can you do?"
- leviathans.300.f:1 "We want to invest in a §YMinistry of Culture§!."
+ leviathans.300.e:0 "คุณสามารถทำอะไรอีกได้บ้าง?"
+ leviathans.300.f:1 "เราอยากลงทุนใน §Yกระทรวงวัฒนธรรม§!"
  leviathans.301.name:0 "The [from.GetName]"
  leviathans.301.desc:0 "The Artisan Troupe won't respond to our hails."
  leviathans.301.desc.unknown:1 "Translations aside, once we exchanged our information with [From.GetName] they closed down all channels and refused to speak to us."
@@ -256,7 +256,7 @@
  leviathans.304b.desc:0 "The stars shine that bit more brightly by your actions here today!"
  leviathans.304c.desc:0 "We knew there was something special about you [root.GetSpeciesAdj]. Truly, you are beings of refined taste."
  leviathans.305.desc:2 "Fabulous! We'd be glad to entrust you with one of our creations. It is sure to bring joy to the people of your empire."
- leviathans.305.a.tooltip:3 "Gain access to an §S£decision£ $decision_art_monument$§! §YDecision§! that can be enacted on one planet with the following effects:\n£amenities£ $MOD_PLANET_AMENITIES_MULT$ §G+15%§!\n$MOD_PLANET_IMMIGRATION_PULL_MULT$: §G+50%§!"
+ leviathans.305.a.tooltip:3 "สามารถใช้ §Yการตัดสินใจ§! §S£decision£ $decision_art_monument$§! ได้ ซึ่งสามารถทำได้บนดาวดวงหนึ่งและมีผลดังต่อไปนี้:\n£amenities£ $MOD_PLANET_AMENITIES_MULT$ §G+15%§!\n$MOD_PLANET_IMMIGRATION_PULL_MULT$: §G+50%§!"
  leviathans.305.a.reply:1 "Excellent! The piece will be sent to your storage facility post-haste. Simply ask your planetary administration to enact the §YDecision§! on any planet you wish.\n\nWe humbly thank you for your patronage."
  leviathans.330.desc:2 "Organizing a festival of that scale would require all of our artists to bring their talent to bear. Not an easy job, nor a cheap one."
  leviathans.330.a.reply:0 "Excellent! We will be delighted to create this magnificent Festival of Worlds!"
