--- a/mod/thmod/localisation/english/machine_age_l_english.yml
+++ b/mod/thmod/localisation/english/machine_age_l_english.yml
@@ -804,9 +804,9 @@
  cybernetic_creed_labor_robot_points_modifier_desc: "$CYBERCREED_labor$ $elevated_creed_desc$"
  CANNOT_MODIFY_SELF_MODIFIED_SPECIES: "$TRIGGER_FAIL$This species has self-modified and cannot be gene-modded."
  CANNOT_MODIFY_RITUALISTIC_IMPLANTS_SPECIES: "$TRIGGER_FAIL$Those with Ritualistic Implants of any Cybernetic Creed cannot be modified as the tenets of their faith demand."
- NEEDS_GENE_TAILORING_OR_INTERGRATED_ANATOMY: "$TRIGGER_FAIL$To modify this species we require either:\n- £society£ §Y$tech_gene_tailoring$§! Technology\n- £unity£ §Y$tr_cybernetics_integrated_anatomy$§! Tradition"
- NEEDS_ROBOT_MODDING: "$TRIGGER_FAIL$To modify this species we require:\n- £engineering£ §Y$tech_robomodding$§! Technology"
- NEEDS_ROBOT_MODDING_M: "$TRIGGER_FAIL$To modify this species we require:\n- £engineering£ §Y$tech_robomodding_m$§! Technology"
+ NEEDS_GENE_TAILORING_OR_INTERGRATED_ANATOMY: "$TRIGGER_FAIL$เพื่อปรับเปลี่ยนเผ่าพันธุ์นี้ เราต้องการสิ่งใดสิ่งหนึ่ง:\n- เทคโนโลยี £society£ §Y$tech_gene_tailoring$§! \n- วัฒนธรรม £unity£ §Y$tr_cybernetics_integrated_anatomy$§!"
+ NEEDS_ROBOT_MODDING: "$TRIGGER_FAIL$เพื่อปรับเปลี่ยนเผ่าพันธุ์นี้ เราต้องการ:\n- เทคโนโลยี £engineering£ §Y$tech_robomodding$§!"
+ NEEDS_ROBOT_MODDING_M: "$TRIGGER_FAIL$เพื่อปรับเปลี่ยนเผ่าพันธุ์นี้ เราต้องการ:\n- เทคโนโลยี £engineering£ §Y$tech_robomodding_m$§!"
  requires_tech_gene_tailoring: "$TRIGGER_FAIL$ต้องการเทคโนโลยี £society£ §Y$tech_gene_tailoring$§!"
  ASCENSION_SITUATION_ONGOING: "$TRIGGER_FAIL$We cannot modify this species while we have an ongoing §YAscension Situation§!."
  cybercreed_tithe_mining: "The Tithe of Mining"
@@ -2012,26 +2012,26 @@
  tech_orbital_arc_furnace: "เตาหลอมอาร์ก"
  tech_orbital_arc_furnace_desc: "$orbital_arc_furnace_1_MEGASTRUCTURE_DETAILS$"
  allow_arc_furnace: "§Hปลดล็อกสิ่งก่อสร้างขนาดมหึมา:§! เตาหลอมอาร์ก"
- arc_furnace_system_tt: "§EArc Furnace Potential:§!$TABBED_NEW_LINE$- Arc Furnace Deposit Sites: §Y[root.GetArcFurnacePlanets]§!"
+ arc_furnace_system_tt: "§Eศักยภาพของเตาหลอมอาร์ก:§!$TABBED_NEW_LINE$- แหล่งทรัพยากรของเตาหลอมอาร์ก: §Y[root.GetArcFurnacePlanets]§!"
  dyson_swarm_1: "$dyson_swarm_3$: อาร์เรย์"
  dyson_swarm_1_DESC: "$dyson_swarm_1_MEGASTRUCTURE_DETAILS$"
  dyson_swarm_2: "$dyson_swarm_3$: กลุ่ม"
  dyson_swarm_2_DESC: "$dyson_swarm_1_MEGASTRUCTURE_DETAILS$"
  dyson_swarm_3: "ฝูงไดสัน"
  dyson_swarm_3_DESC: "$dyson_swarm_1_MEGASTRUCTURE_DETAILS$"
- dyson_swarm_1_MEGASTRUCTURE_DETAILS: "An array of interlinked satellites, the §Y$dyson_swarm_3$§! is designed to improve the output of stellar deposits."
+ dyson_swarm_1_MEGASTRUCTURE_DETAILS: "§Y$dyson_swarm_3$§! เป็นกลุ่มดาวเทียมที่เชื่อมโยงกันหลายดวง ได้รับการออกแบบมาเพื่อปรับปรุงผลผลิตของแหล่งทรัพยากรของดาวฤกษ์"
  tech_dyson_swarm: "ฝูงไดสัน"
  tech_dyson_swarm_desc: "$dyson_swarm_1_MEGASTRUCTURE_DETAILS$"
  allow_dyson_swarm: "§Hปลดล็อกสิ่งก่อสร้างขนาดมหึมา:§! ฝูงไดสัน"
  dyson_swarm_1_mod: "$dyson_swarm_1$"
  dyson_swarm_1_mod_desc: "$dyson_swarm_1_DESC$"
- dyson_swarm_1_mod_tooltip: "Star Output: §G+$@dyson_swarm_1_mod_value|%0$§!"
+ dyson_swarm_1_mod_tooltip: "ผลผลิตของดาว: §G+$@dyson_swarm_1_mod_value|%0$§!"
  dyson_swarm_2_mod: "$dyson_swarm_2$"
  dyson_swarm_2_mod_desc: "$dyson_swarm_2_DESC$"
- dyson_swarm_2_mod_tooltip: "Star Output: §G+$@dyson_swarm_2_mod_value|%0$§!"
+ dyson_swarm_2_mod_tooltip: "ผลผลิตของดาว: §G+$@dyson_swarm_2_mod_value|%0$§!"
  dyson_swarm_3_mod: "$dyson_swarm_3$"
  dyson_swarm_3_mod_desc: "$dyson_swarm_3_DESC$"
- dyson_swarm_3_mod_tooltip: "Star Output: §G+$@dyson_swarm_3_mod_value|%0$§!"
+ dyson_swarm_3_mod_tooltip: "ผลผลิตของดาว: §G+$@dyson_swarm_3_mod_value|%0$§!"
  civic_tooltip_pleasure_seekers_effects_machines: "Allows §Y$living_standard_decadent$§! Living Standard, under which all affected £pop£ Pops have increased £happiness£ §YHappiness§! and £consumer_goods£ §Y$consumer_goods$§! Upkeep.\nMechanical Pop Assembly from Entertainers: §G+1%§!\n£job_servant£ §Y$job_servant_plural$§! produce §Y5§! additional £amenities£ §YAmenities§!."
  get_eye_name_robot: "ocular sensor"
  get_eye_name_default_eye: "eye"
@@ -2092,7 +2092,7 @@
  councilor_natural_design_female: "Grand Genomicist"
  councilor_natural_design_desc: "The Grand Genomicist oversees the robust medical and governmental systems that safeguard nature's ideal genetic code."
  triggered_natural_dislike_ascension: "Misguided Ascension"
- civic_tooltip_not_natural_design: "Does NOT have a ['concept_natural_design_civics'] Civic"
+ civic_tooltip_not_natural_design: "ไม่มีพลเมือง ['concept_natural_design_civics']"
  concept_natural_design_civics: "$civic_natural_design$"
  concept_natural_design_civics_desc: "$concept_natural_design_civics$ Civics consist of \n- ['civic:civic_natural_design']$NEW_LINE$- ['civic:civic_hive_natural_design']"
  civic_guided_sapience: "ไกด์ต้นกำเนิด"
@@ -2324,8 +2324,8 @@
  mod_job_overlord_healthcare_add: "$mod_job_healthcare_add$"
  mod_job_overlord_replicator_add: "$mod_job_replicator_add$"
  requires_no_machine_age: "$TRIGGER_FAIL$In order to construct a §Y$dyson_sphere_5$§!, we must upgrade an existing §Y$dyson_swarm_3$§!"
- requires_no_arc_furnace: "$TRIGGER_FAIL$Cannot construct in the same system as an existing §Y$orbital_arc_furnace_4$§!"
- requires_no_arc_furnace_construction: "$TRIGGER_FAIL$Cannot construct in the same system as an ongoing §Y$orbital_arc_furnace_4$ construction§!"
+ requires_no_arc_furnace: "$TRIGGER_FAIL$ไม่สามารถสร้างในระบบเดียวกันกับ §Y$orbital_arc_furnace_4$§! ที่มีอยู่ได้"
+ requires_no_arc_furnace_construction: "$TRIGGER_FAIL$ไม่สามารถสร้างในระบบเดียวกันกับ §Y$orbital_arc_furnace_4$ construction§! ที่กำลังสร้างอยู่ได้"
  no_titan_tech: "$TRIGGER_FAIL$ Requires £engineering£ §Y$tech_titans$§! technology"
  mod_job_bath_attendant_individual_machine_add: "$mod_job_bath_attendant_machine_add$"
  job_bath_attendant_individual_machine: "Lubrication Terminal"
