--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -478,8 +478,8 @@
  mod_planet_building_foundry_1_build_speed_mult:0 "ความเร็วในการสร้างโรงหล่อ"
  mod_planet_building_factory_1_build_speed_mult:0 "ความเร็วในการสร้างโรงงาน"
  mod_planet_building_research_lab_1_build_speed_mult:0 "ความเร็วในการสร้างห้องวิจัย"
- mod_planet_building_research_lab_2_build_speed_mult: "Research Complex Build Speed"
- mod_planet_building_research_lab_3_build_speed_mult: "Advanced Research Complexes Build Speed"
+ mod_planet_building_research_lab_2_build_speed_mult: "ความเร็วในการสร้างศูนย์วิจัย"
+ mod_planet_building_research_lab_3_build_speed_mult: "ความเร็วในการสร้างศูนย์วิจัยขั้นสูง"
  mod_planet_building_refinery_build_speed_mult:0 "ความเร็วในการสร้างโรงงานสกัด"
  mod_planet_building_chemical_plant_build_speed_mult:0 "ความเร็วในการสร้างโรงงานเคมี"
  mod_planet_building_crystal_plant_build_speed_mult:0 "ความเร็วในการสร้างโรงงานผลึก"
@@ -514,8 +514,8 @@
  MOD_COMMAND_LIMIT_MULT:0 "ขีดจำกัดคำสั่งของกองยาน"
  MOD_COUNTRY_NAVAL_COVERAGE_ADD:0 "$navy_coverage$"
  MOD_COUNTRY_NAVAL_COVERAGE_MULT:0 "$navy_coverage$"
- MOD_LEADER_RULER_SKILL_LEVELS:0 "เลเวลผู้ปกครองสูงสุด"
- MOD_LEADER_SKILL_LEVELS:0 "เลเวลผู้นำสูงสุด"
+ MOD_LEADER_RULER_SKILL_LEVELS:0 "เลเวลสูงสุดของผู้ปกครอง"
+ MOD_LEADER_SKILL_LEVELS:0 "เลเวลสูงสุดของผู้นำ"
  MOD_LEADER_LIFESPAN_ADD: "อายุขัยผู้นำ"
  MOD_LEADER_LIFESPAN_MULT: "$MOD_LEADER_LIFESPAN_ADD$"
  MOD_LEADER_STARTING_AGE_ADD: "ผู้นำอายุเริ่มต้น"
@@ -524,12 +524,12 @@
  MOD_RULER_STARTING_AGE_MULT: "ผู้ปกครองอายุเริ่มต้น"
  MOD_HEIR_STARTING_AGE_ADD: "รัชทายาทอายุเริ่มต้น"
  MOD_HEIR_STARTING_AGE_MULT: "รัชทายาทอายุเริ่มต้น"
- MOD_LEADER_ADMIRAL_SKILL_LEVELS:0 "เลเวลพลเรือเอกสูงสุด"
- MOD_LEADER_GENERAL_SKILL_LEVELS:0 "เลเวลพลเอกสูงสุด"
- MOD_LEADER_COMMANDER_SKILL_LEVELS: "Commander Level Cap"
- MOD_LEADER_GOVERNOR_SKILL_LEVELS:0 "เลเวลผู้ว่าการสูงสุด"
- MOD_LEADER_SCIENTIST_SKILL_LEVELS:0 "เลเวลนักวิทยาศาสตร์สูงสุด"
- MOD_LEADER_OFFICIAL_SKILL_LEVELS: "Official Level Cap"
+ MOD_LEADER_ADMIRAL_SKILL_LEVELS:0 "เลเวลสูงสุดของพลเรือเอก"
+ MOD_LEADER_GENERAL_SKILL_LEVELS:0 "เลเวลสูงสุดของพลเอก"
+ MOD_LEADER_COMMANDER_SKILL_LEVELS: "เลเวลสูงสุดของผู้บัญชาการ"
+ MOD_LEADER_GOVERNOR_SKILL_LEVELS:0 "เลเวลสูงสุดของผู้ว่าการ"
+ MOD_LEADER_SCIENTIST_SKILL_LEVELS:0 "เลเวลสูงสุดของนักวิทยาศาสตร์"
+ MOD_LEADER_OFFICIAL_SKILL_LEVELS: "เลเวลสูงสุดของเจ้าหน้าที่"
  MOD_LEADER_INITIAL_SKILL: "ผู้นำ สกิลเลเวลเริ่มต้น"
  mod_commander_initial_skill: "$commander_with_icon$ สกิลเลเวลเริ่มต้น"
  mod_scientist_initial_skill: "$scientist_with_icon$ สกิลเลเวลเริ่มต้น"
@@ -537,9 +537,9 @@
  MOD_LEADER_COST:0 "ค่าจ้างผู้นำ"
  MOD_LEADER_ADMIRAL_COST:0 "ค่าจ้างพลเรือเอก"
  MOD_LEADER_GENERAL_COST:0 "ค่าจ้างพลเอก"
- MOD_LEADER_COMMANDER_COST: "Commander Recruitment Cost"
+ MOD_LEADER_COMMANDER_COST: "ค่าจ้างผู้บัญชาการ"
  MOD_LEADER_SCIENTIST_COST:0 "ค่าจ้างนักวิทยาศาสตร์"
- MOD_LEADER_OFFICIAL_COST: "Official Recruitment Cost"
+ MOD_LEADER_OFFICIAL_COST: "ค่าจ้างเจ้าหน้าที่"
  MOD_LEADER_GOVERNOR_COST:0 "ค่าจ้างผู้ว่าการ"
  MOD_LEADER_SPECIES_EXP_GAIN:0 "ได้ค่าประสบการณ์ของผู้นำ"
  MOD_LEADER_COUNCILOR_EXP_GAIN:0 "เพิ่มประสบการณ์ที่ปรึกษา"
