--- a/mod/thmod/localisation/english/overlord_enclaves_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_enclaves_l_english.yml
@@ -153,7 +153,7 @@
  hired_mercenary_fleet_naval_cap_usage_galcom_3:0 "$hired_mercenary_fleet_naval_cap_usage_no_galcom$"
  hired_mercenary_fleet_naval_cap_usage_galcom_4:0 "$hired_mercenary_fleet_naval_cap_usage_no_galcom$"
  hired_mercenary_fleet_naval_cap_usage_galcom_5:0 "$hired_mercenary_fleet_naval_cap_usage_no_galcom$"
- requires_mercenary_agreement:0 "§RRequires a §YDiplomatic Agreement§! with a Mercenary Enclave.§!"
+ requires_mercenary_agreement:0 "§Rต้องมี §Yข้อตกลงทางการทูต§! กับ Mercenary Enclave§!"
  enclave_mercenary_station:0 "Mercenary Starbase"
  enclave_mercenary_station_plural:0 "Mercenary Starbases"
  enclave_mercenary_starbase_ruined:0 "Ruined Mercenary Starbase"
@@ -212,39 +212,39 @@
  enclave.305.q.desc:0 "Hello! Don't mind me... Just been tinkering with this here industrial holo-emitter. Fascinating devices, these. It's a pet project of mine, to see how large a hologram it could actually project. Not half as difficult when you're beaming one out into space, see.\n\nAh, but I could prattle on for ages. How can we be of service?"
  enclave.305.organic.desc:0 "Great to see you again! Don't mind those scraping and moaning sounds. We have, uh... Guests, at the moment! They're a bit on the larger side; tend to get a bit... Hungry. And little wonder, at the rate they're regrowing those flagella!\n\nAhem. Excuse me. How can we help you?"
  enclave.305.desc.hostile:0 "Hmm, we've met your ilk before...\n\nWe have nothing to say to you, nor any services to offer. Kindly be on your way."
- enclave.305.a:0 "We'd like to §Yscrap a fleet§!."
- enclave.305.b:0 "What §Yreclaimed vessels§! do you have?"
- enclave.305.c:0 "Tell us about §YSalvage Works§! buildings."
- enclave.305.d:0 "Can you aid us with §Yconstruction§! efforts?"
- enclave.305.e:0 "We'd like you to salvage some §Ydebris§!."
- enclave.305.f:1 "Can you help us with §Yengineering research§!?"
- enclave.305.g:1 "We wish to hire a §Y$master_salvager$§!."
+ enclave.305.a:0 "เราต้องการที่จะ §Yแยกชิ้นส่วนกองยาน§!"
+ enclave.305.b:0 "คุณมี §Yยานที่นำกลับมาใช้ใหม่§! อะไรบ้าง?"
+ enclave.305.c:0 "บอกเราเกี่ยวกับสิ่งปลูกสร้าง §YSalvage Works§!"
+ enclave.305.d:0 "คุณสามารถช่วยเราเรื่องการ §Yการก่อสร้าง§! ได้ไหม?"
+ enclave.305.e:0 "เราต้องการให้คุณแยกชิ้นส่วน §Yเศษซาก§!"
+ enclave.305.f:1 "คุณสามารถช่วยเราเรื่อง §Yงานวิจัยด้านวิศวกรรม§! ได้หรือไม่?"
+ enclave.305.g:1 "เราต้องการจ้าง §Y$master_salvager$§!"
  enclave.310.desc:1 "Splendid! It would be our pleasure to take that off your hands.\n\nAccording to our scanners, you have the following fleets within range. You'll find our estimates attached; the choice is now yours!\n\n$enclave.310.instructions$"
  enclave.310.organic.desc:0 "Splendid! It would be our pleasure to... By the stars, what is that?! You call that a vessel? I mean, I can see how it... Wow, it's a mean-looking thing. Please, don't do anything hasty! We can take living 'ships' off your hands too, but I'm afraid §Hwe must charge a clean-up penalty§!.\n\nAccording to our scanners, you have the following fleets within range. You'll find our estimates attached; the choice is now yours!\n\n$enclave.310.instructions$"
  enclave.310.nofleet.desc:1 "Of course! Our service is straightforward: bring a fleet in here to §H[salvager_enclave_system.GetName]§!, and give us a hail. Once we verify ownership, we can provide you with a list of estimates. We'll then take possession, and your reclaimed materials will be with you in no time.\n\nOh, also: no scrapping of others' merchandise! We do not want to suffer through the kind of conflict that can bring up - not again, at least...\n\n$enclave.310.instructions$"
- enclave.310.instructions:0 "§EWe can have our ships appraised and scrapped if we bring them to the Salvagers' starbase in the§! §H[salvager_enclave_system.GetName]§!§E system.§!"
- enclave.310.a:0 "Good to know. About your other services..."
- enclave.310.b:0 "The §H[scrappable_fleet_1.GetName]§!."
- enclave.310.c:0 "The §H[scrappable_fleet_2.GetName]§!."
- enclave.310.d:0 "The §H[scrappable_fleet_3.GetName]§!."
- enclave.310.e:0 "The §H[scrappable_fleet_4.GetName]§!."
+ enclave.310.instructions:0 "§Eเราสามารถประเมินราคาและแยกทำลายยานของเราได้หากเราส่งมันไปที่ฐานทัพดาวของนักกู้ซากใน§! §Eระบบดาว§! §H[salvager_enclave_system.GetName]§!"
+ enclave.310.a:0 "นั่นเป็นเรื่องดีที่ได้รู้ เกี่ยวกับบริการอื่นๆ ของคุณ..."
+ enclave.310.b:0 "§H[scrappable_fleet_1.GetName]§!"
+ enclave.310.c:0 "§H[scrappable_fleet_2.GetName]§!"
+ enclave.310.d:0 "§H[scrappable_fleet_3.GetName]§!"
+ enclave.310.e:0 "§H[scrappable_fleet_4.GetName]§!"
  enclave.310.organic_penalty.tt:0 "£energy£$@ScrapOrganicCost|Y$ (§Rcleaning fees§!)\n\n"
- enclave.310.tt:1 "We will receive:"
+ enclave.310.tt:1 "เราจะได้รับ:"
  enclave.315.desc:0 "Thank you! Your reclaimed materials will be with you shortly."
  enclave.320.desc:0 "Marvelous! When a busted-up ship comes our way, we work hard to restore it back to working life. Right now we have the following types available.\n\nKnow that every vessel we reclaim is sold under our §HDurasteel Guarantee§!. We're confident these ships will run more smoothly now than back when they were shipyard-fresh!\n\nJust bear in mind: reclamation is a time-consuming process. We cannot provide you an entire squadron without having to restock afterwards, so you may need to check back with us in future."
  enclave.320.timeout.desc:1 "Well, whenever a busted-up ship comes our way, we work hard to restore it back to working life. Unfortunately it appears §Your docks are empty§! at the moment!\n\nPlease return later, and we'll see what we can do for you. It usually takes us around... §H2 years§! for a complete set of refurbishments."
- enclave.320.b:0 "Reclaimed $CORVETTE$."
- enclave.320.b.tt:0 "Purchase a $CORVETTE$ of a design once used by the §Y[salvager_reclaimed_corvette_country.GetName]§!."
- enclave.320.bb:0 "Reclaimed $CORVETTE$ squadron."
- enclave.320.bb.tt:1 "Purchase a small fleet of 10 $corvette_plural$, of a design once used by the §Y[salvager_reclaimed_corvette_country.GetName]§!.\n\nThis will occupy the Salvagers for some time; we will be unable to purchase other reclaimed ships for §H2 years§!.\n\n"
- enclave.320.c:0 "Reclaimed $DESTROYER$."
- enclave.320.c.tt:0 "Purchase a $DESTROYER$ of a design once used by the §Y[salvager_reclaimed_destroyer_country.GetName]§!."
+ enclave.320.b:0 "$CORVETTE$ ที่ถูกนำกลับมาใช้ใหม่"
+ enclave.320.b.tt:0 "ซื้อ $CORVETTE$ ที่เคยใช้โดย §Y[salvager_reclaimed_corvette_country.GetName]§!"
+ enclave.320.bb:0 "ฝูง $CORVETTE$ ที่ถูกนำกลับมาใช้ใหม่"
+ enclave.320.bb.tt:1 "ซื้อกองยานขนาดเล็ก 10 $corvette_plural$ ที่เคยใช้โดย §Y[salvager_reclaimed_corvette_country.GetName]§!\n\nยานลำนี้จะครอบครองโดยนักกู้ซากเป็นเวลาหนึ่งช่วงและเราจะไม่สามารถซื้อยานลำอื่นที่ถูกกู้คืนได้เป็นเวลา §H2 ปี§!\n\n"
+ enclave.320.c:0 "$DESTROYER$ ที่ถูกนำกลับมาใช้ใหม่"
+ enclave.320.c.tt:0 "ซื้อ $DESTROYER$ ที่เคยใช้โดย §Y[salvager_reclaimed_destroyer_country.GetName]§!"
  enclave.320.c.timeout:0 "Another $DESTROYER$ will be available for purchase after §Y[root.salvager_destroyer_timer]§!."
- enclave.320.d:0 "Reclaimed $CRUISER$."
- enclave.320.d.tt:0 "Purchase a $CRUISER$ of a design once used by the §Y[salvager_reclaimed_cruiser_country.GetName]§!."
+ enclave.320.d:0 "$CRUISER$ ที่ถูกนำกลับมาใช้ใหม่"
+ enclave.320.d.tt:0 "ซื้อ $CRUISER$ ที่เคยใช้โดย §Y[salvager_reclaimed_cruiser_country.GetName]§!"
  enclave.320.d.timeout:0 "Another $CRUISER$ will be available for purchase after §Y[root.salvager_cruiser_timer]§!."
- enclave.320.e:0 "Reclaimed $BATTLESHIP$."
- enclave.320.e.tt:0 "Purchase a $BATTLESHIP$ of a design once used by the §Y[salvager_reclaimed_battleship_country.GetName]§!."
+ enclave.320.e:0 "$BATTLESHIP$ ที่ถูกนำกลับมาใช้ใหม่"
+ enclave.320.e.tt:0 "ซื้อ $BATTLESHIP$ ที่เคยใช้โดย §Y[salvager_reclaimed_battleship_country.GetName]§!"
  enclave.320.e.timeout:0 "Another $BATTLESHIP$ will be available for purchase after §Y[root.salvager_battleship_timer]§!."
  enclave.325.desc:0 "Thank you kindly!"
  enclave.330.desc:0 "Certainly! You give us space to work, and our mechanics can fast-track your local ship repairs in no time.\n\nWe'll fix you up with all you need to attach a Salvage Works module onto the §Ystarbase adjoining ours§!. You may need to shift around a bulkhead or two, but once our engineers have a place to set up shop, your ships will be flying right through those repair bays! We can even help out with your construction efforts empire-wide, every once in a while.\n\nSo, how about it: does a §HSalvage Works§! take your fancy?"
@@ -260,7 +260,7 @@
  enclave.340.nodebris.desc:1 "Ah yes, battle: that most sorrowful cause of salvage...\n\nYou'll have to forgive me, [root.GetRulerTitle]; barbaric destruction brings us no joy. However, we understand that needs must. We can indeed handle salvage under commission, if your ships are unwilling or unable to sift through the debris.\n\nCome to us when need arises, and grant us the rights of salvage. We will then undertake to compensate you for whatever materials and knowledge we find out there."
  enclave.340.lowopinion.desc:1 "Alas for that most sorrowful cause of salvage: battle.\n\nYou'll have to forgive me, [root.GetRulerTitle]; we have our reasons for mourning such willful destruction. However, for our §Yregular customers§! we can indeed handle salvage under commission.\n\nReturn to us later, and when the need arises. We will undertake to deal with §Hdebris fields§! you have claim to, and shall compensate you for whatever materials and engineering knowledge we find out there."
  enclave.340.a:0 "$enclave.310.a$"
- enclave.340.b.tt:0 "We shall §Rlose access§! to up to §Y3 debris fields§!. The [salvager_enclave_country.GetName] will deliver salvaged technology or materials to us §Ywithin 90 days§!."
+ enclave.340.b.tt:0 "เราจะ §Rสูญเสียการเข้าถึง§! แหล่งเศษซากสูงสุด §Y3 แห่ง§! [salvager_enclave_country.GetName] จะส่งมอบเทคโนโลยีหรือวัสดุที่กู้คืนมาให้เรา §Yภายใน 90 วัน§!"
  enclave.341.desc:0 "Thank you. The transfer of salvage rights looks to be in order; the claim is good. We'll be in touch soon."
  enclave.342.desc:0 "Oh! I'm sorry to say, it looks as though those debris fields of yours have deteriorated over the course of our conversation. Even we lack the skills to recover a wreck which has been left that long. Alas, our old foe entropy strikes again!"
  enclave.345.desc:1 "It would be our pleasure! Idle [salvager_enclave_country.species.GetHandNamePlural] make curious minds, and that counts double for us! We are most happy to lend aid and share handy tips with our §Yregular customers§! - so long as our modest expenses are covered.\n\nWe would also appreciate any donation you can make to help shore up our humble starbase! Old hulls can be repurposed many times over, but sometimes there's just no beating the reliability of a freshly-smelted bulkhead."
@@ -295,25 +295,25 @@
  enclave.365.desc:0 "A courier barge has arrived from the §Y[salvager_enclave_country.GetName]§!, carrying various blueprints and a small consignment of resources. All were reclaimed from debris salvage.\n\nThe pilot of this barge spoke little, other than to express polite thanks for our custom. The handover was treated with a great deal of solemnity."
  enclave.365.a:0 "A job well done."
  enclave.365.b:0 "Sympathetic fools."
- enclave.365.tt:0 "We will receive:"
+ enclave.365.tt:0 "เราจะได้รับ:"
  enclave.365.d:0 "Hail them! We have more debris they could handle."
  enclave.375.name:0 "Salvager Enclave Destroyed"
  enclave.375.desc:0 "Our offensive in the [salvager_system.GetName] system was a resounding success. The [FROM.GetName] is destroyed, and the few remaining survivors have scattered to the void. With their facilities in ruin, their petty services are a thing of the past. The galaxy is well rid of them."
  enclave.380.desc:0 "We have received reports that the [FROM.GetName] Enclave in the [salvager_system.GetName] system has been destroyed. The aggressors made short work of the campaign, reducing the Salvagers' facilities to rubble. The few remaining survivors have scattered, and it appears that for the time being the galaxy will have to make do without their services."
  requires_salvager_enclave:0 "§RRequires a §YSalvager Enclave§! in the system.§!"
- requires_salvager_agreement:0 "§RRequires a §YDiplomatic Agreement§! with the local Salvager Enclave.§!"
- salvager_scrap_fleet_cooldown:1 "We may only purchase this service again after §H[root.salvager_scrap_timer]§!."
- requires_reclaimable_vessels:1 "We have met other empires with salvageable ship designs."
- salvager_reclaimed_vessel_cooldown:0 "Vessels are available for purchase (new stocks expected after §H[root.reclaimed_vessel_timer]§!)."
+ requires_salvager_agreement:0 "§Rต้องมี §Yข้อตกลงทางการทูต§! กับ Salvager Enclave ในท้องถิ่น§!"
+ salvager_scrap_fleet_cooldown:1 "เราจะซื้อบริการนี้ได้อีกครั้งหลังจาก §H[root.salvager_scrap_timer]§! เท่านั้น"
+ requires_reclaimable_vessels:1 "เราได้พบกับจักรวรรดิอื่นๆ ที่มีการออกแบบยานที่สามารถกู้กลับมาใช้ใหม่ได้"
+ salvager_reclaimed_vessel_cooldown:0 "ยานมีพร้อมจำหน่าย (คาดว่าจะมีสินค้าใหม่หลังจาก §H[root.reclaimed_vessel_timer]§!)"
  requires_salvage_works:1 "Requires a §Y$sm_salvager_workshop$§!."
- salvager_overdrive_cooldown:1 "We may only purchase this service again after §H[root.salvager_overdrive_timer]§!."
+ salvager_overdrive_cooldown:1 "เราจะซื้อบริการนี้ได้อีกครั้งหลังจาก §H[root.salvager_overdrive_timer]§! เท่านั้น"
  one_salvage_commission_only:1 "£trigger_no£ We may only order §Hone§! Salvage Commission at a time."
- requires_debris_field:1 "We have claims on at least one §Ydebris field§!."
+ requires_debris_field:1 "เราอ้างสิทธิ์ §Yพื้นที่เศษซาก§! อย่างน้อยหนึ่งแห่ง"
  salvager_insight_cooldown:1 "We already have the §YSalvager Insight§! modifier."
- salvager_tt_scrapfleet:1 "Task the Salvagers with converting a fleet of our choosing back into £alloys£ §Y$alloys$§!."
- salvager_tt_reclaimedvessel:0 "Purchase §Yships§! based on designs used by other empires."
+ salvager_tt_scrapfleet:1 "มอบหมายให้นักกู้ซากเปลี่ยนกองยานที่เราเลือกกลับมาเป็น £alloys£ §Y$alloys$§!"
+ salvager_tt_reclaimedvessel:0 "ซื้อ §Yยาน§! ที่มีต้นแบบและใช้งานโดยจักรวรรดิอื่น"
  salvager_tt_salvageworks:0 "Purchase a unique §YStarbase Building§!."
- salvager_tt_commissionsalvage:1 "Task the Salvagers with investigating §YDebris§! for us. We will receive £engineering_research£ §YResearch§! and £alloys£ §Y$alloys$§!."
+ salvager_tt_commissionsalvage:1 "มอบหมายให้นักกู้ซากทำการสืบสวน §Yซากสลักหักพัง§! ให้เรา เราจะได้รับ £engineering_research£ §Yการวิจัย§! และ £alloys£ §Y$alloys$§!"
  enclave.405.name:1 "[shroudwalker_enclave_country.GetName]"
  enclave.405.generic.a.desc:1 "Ah! A visitor. Welcome.\n\nWe are the §H[shroudwalker_enclave_country.GetName]§!. Within this void-borne hull, our coven communes with forces incomprehensible to most mortal minds. We contemplate the secrets that lie hidden in dreams, reservoirs of untapped potential, the unseen gears driving whole civilizations... §YThe Shroud§! reveals much to those who would listen.\n\nAt this moment, I listen to you. What brings you to us? Do you yet know?"
  enclave.405.generic.n.desc:0 "Welcome back, visitor. We have been waiting."
@@ -351,7 +351,7 @@
  requires_not_shroudwalker_system:0 "§RCannot be built in a system shared with the §YShroudwalker Enclave§!.§!"
  requires_no_bypass:0 "§RCannot be built in a system with an existing Wormhole.§!"
  limit_one_shroud_tunnel:0 "§RWe may only maintain §Yone§! Shroud Tunnel at a time.§!"
- requires_shroudwalker_agreement:0 "§RRequires a §YDiplomatic Agreement§! with the Shroudwalker Enclave.§!"
+ requires_shroudwalker_agreement:0 "§Rต้องมี §Yข้อตกลงทางการทูต§! กับ Shroudwalker Enclave§!"
  shroudwalker_divination_cooldown:0 "§RWe may only experience one §YDivination§! at a time.§!"
  shroudwalker_divination_cooldown_two:0 "§RThe Shroudwalkers will not be able to attempt another §YDivination§! until §Y[root.shroudwalker_divination_timer]§!§!."
  SHROUD_TUNNEL_GALACTIC:0 "Shroud Tunnel"
