--- a/mod/thmod/localisation/english/overlord_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_l_english.yml
@@ -280,13 +280,13 @@
  resolution_defenseprivatization_repeal_3_effect_success:0 "ยกเลิกมติ §Y$resolution_defenseprivatization_condottieri$§! แล้วออก §Y$resolution_defenseprivatization_private_support_troops$§! เป็นกฎหมายกาแล็กติก"
  resolution_defenseprivatization_repeal_4_effect_success:0 "ยกเลิกมติ §Y$resolution_defenseprivatization_security_business$§! แล้วออก §Y$resolution_defenseprivatization_condottieri$§! เป็นกฎหมายกาแล็กติก"
  resolution_defenseprivatization_repeal_5_effect_success:0 "ยกเลิกมติ §Y$resolution_defenseprivatization_corporate_warlords$§! แล้วออก §Y$resolution_defenseprivatization_security_business$§! เป็นกฎหมายกาแล็กติก"
- resolution_defenseprivatization_defense_contracts_tooltip:1 "Every §YMercenary Enclave§! gains §G+10§! Naval Capacity.\n§YMercenary Dividends§! are more frequent.\nHired §YMercenary Fleets§! take up §G5%§! less Naval Capacity but have §R+10%§! Energy Upkeep."
- resolution_defenseprivatization_private_support_troops_tooltip:1 "Every §YMercenary Enclave§! gains §G+20§! Naval Capacity.\n§YMercenary Dividends§! are more frequent.\nHired §YMercenary Fleets§! take up §G10%§! less Naval Capacity but have §R+20%§! Energy Upkeep."
- resolution_defenseprivatization_condottieri_tooltip:1 "Every §YMercenary Enclave§! gains §G+30§! Naval Capacity.\n§YMercenary Dividends§! are more frequent.\nHired §YMercenary Fleets§! take up §G15%§! less Naval Capacity but have §R+30%§! Energy Upkeep.\n\n$resolution_defenseprivatization_breach$"
- resolution_defenseprivatization_security_business_tooltip:1 "Every §YMercenary Enclave§! gains §G+40§! Naval Capacity.\n§YMercenary Dividends§! are more frequent.\nHired §YMercenary Fleets§! take up §G20%§! less Naval Capacity but have §R+40%§! Energy Upkeep.\n§G+20%§! £diplo_weight£ §YDiplomatic Weight§! while a §YMercenary Fleet§! is hired.\n\n$resolution_defenseprivatization_breach$"
- resolution_defenseprivatization_corporate_warlords_tooltip:1 "Every §YMercenary Enclave§! gains §G+50§! Naval Capacity.\n§YMercenary Dividends§! are more frequent.\nHired §YMercenary Fleets§! take up §G25%§! less Naval Capacity but have §R+50%§! Energy Upkeep.\n§G+40%§! £diplo_weight£ §YDiplomatic Weight§! while a §YMercenary Fleet§! is hired.\n\n§YHaving no hired Mercenaries§! is §Rbanned§!."
- resolution_defenseprivatization_breach:0 "§YBeing at war without any hired Mercenaries§! is §Rbanned§!."
- resolution_defenseprivatization_defense_contracts_merc_naval_cap:0 "Naval Capacity from Resolutions"
+ resolution_defenseprivatization_defense_contracts_tooltip:1 "- ทุกๆ §Yกองยานทหารรับจ้าง Enclave§! ได้รับ ความจุยานรบ §G+10§!\n- §Yเงินปันผลทหารรับจ้าง§! มีบ่อยครั้งมากขึ้น\n- §Yกองยานทหารรับจ้าง§! ที่จ้างมาจะใช้ความจุยานรบลดลง §G5%§! แต่ได้รับค่าบำรุงรักษา(พลังงาน)เพิ่มขึ้น §R+10%§!"
+ resolution_defenseprivatization_private_support_troops_tooltip:1 "- ทุกๆ §Yกองยานทหารรับจ้าง Enclave§! ได้รับ ความจุยานรบ §G+20§!\n- §Yเงินปันผลทหารรับจ้าง§! มีบ่อยครั้งมากขึ้น\n- §Yกองยานทหารรับจ้าง§! ที่จ้างมาจะใช้ความจุยานรบลดลง §G10%§! แต่ได้รับค่าบำรุงรักษา(พลังงาน)เพิ่มขึ้น §R+20%§!"
+ resolution_defenseprivatization_condottieri_tooltip:1 "- ทุกๆ §Yกองยานทหารรับจ้าง Enclave§! ได้รับ ความจุยานรบ §G+30§!\n- §Yเงินปันผลทหารรับจ้าง§! มีบ่อยครั้งมากขึ้น\n- §Yกองยานทหารรับจ้าง§! ที่จ้างมาจะใช้ความจุยานรบลดลง §G15%§! แต่ได้รับค่าบำรุงรักษา(พลังงาน)เพิ่มขึ้น §R+30%§!\n\n$resolution_defenseprivatization_breach$"
+ resolution_defenseprivatization_security_business_tooltip:1 "- ทุกๆ §Yกองยานทหารรับจ้าง Enclave§! ได้รับ ความจุยานรบ §G+40§!\n- §Yเงินปันผลทหารรับจ้าง§! มีบ่อยครั้งมากขึ้น\n- §Yกองยานทหารรับจ้าง§! ที่จ้างมาจะใช้ความจุยานรบลดลง §G20%§! แต่ได้รับค่าบำรุงรักษา(พลังงาน)เพิ่มขึ้น §R+40%§!\n- £diplo_weight£ §Yน้ำหนักทางการทูต§! §G+20%§! ในขณะจ้าง §Yกองยานทหารรับจ้าง§!\n\n$resolution_defenseprivatization_breach$"
+ resolution_defenseprivatization_corporate_warlords_tooltip:1 "- ทุกๆ §Yกองยานทหารรับจ้าง Enclave§! ได้รับ ความจุยานรบ §G+50§!\n- §Yเงินปันผลทหารรับจ้าง§! มีบ่อยครั้งมากขึ้น\n- §Yกองยานทหารรับจ้าง§! ที่จ้างมาจะใช้ความจุยานรบลดลง §G25%§! แต่ได้รับค่าบำรุงรักษา(พลังงาน)เพิ่มขึ้น §R+50%§!\n- £diplo_weight£ §Yน้ำหนักทางการทูต§! §G+40%§! ในขณะจ้าง §Yกองยานทหารรับจ้าง§!\n\n§Yการไม่จ้างทหารรับจ้าง§! เป็น §Rสิ่งต้องห้าม§!"
+ resolution_defenseprivatization_breach:0 "§Yการอยู่ในสงครามโดยไม่มีทหารรับจ้าง§! เป็น §Rสิ่งต้องห้าม§!"
+ resolution_defenseprivatization_defense_contracts_merc_naval_cap:0 "ความจุยานรบจากมติ"
  resolution_defenseprivatization_private_support_troops_merc_naval_cap:0 "$resolution_defenseprivatization_defense_contracts_merc_naval_cap$"
  resolution_defenseprivatization_condottieri_merc_naval_cap:0 "$resolution_defenseprivatization_defense_contracts_merc_naval_cap$"
  resolution_defenseprivatization_security_business_merc_naval_cap:0 "$resolution_defenseprivatization_defense_contracts_merc_naval_cap$"
@@ -294,21 +294,21 @@
  resolution_defenseprivatization_security_business_merc_hired:0 "$resolution_defenseprivatization_security_business$"
  resolution_defenseprivatization_corporate_warlords_merc_hired:0 "$resolution_defenseprivatization_corporate_warlords$"
  not_allowed_for_galcom_resolution:0 "§RThis Term is blocked by a Galactic Community Resolution.§!"
- galcom_tooltip_no_independent_sensors:0 "§Y$subject_does_not_get_sensors$§! is no longer valid as a Term in Agreements between Galactic Community members."
- galcom_tooltip_no_independent_diplomacy:0 "§Y$subject_can_do_diplomacy$§! is no longer valid as a Term in Agreements between Galactic Community members."
- galcom_tooltip_no_integration_permitted:0 "§Y$subject_can_be_integrated$§! is no longer valid as a Term in Agreements between Galactic Community members."
- galcom_tooltip_no_expansion_prohibited:0 "§Y$subject_cannot_expand$§! is no longer valid as a Term in Agreements between Galactic Community members."
- galcom_tooltip_no_expansion_regulated:0 "§Y$subject_can_expand_with_tithe$§! is no longer valid as a Term in Agreements between Galactic Community members."
- galcom_tooltip_no_limited_diplomacy:0 "§Y$subject_can_not_do_diplomacy$§! is no longer valid as a Term in Agreements between Galactic Community members."
- galcom_tooltip_no_holdings_3:0 "§YHoldings Limit (3)§! is no longer valid as a Term in Agreements for Overlord Galactic Community members."
- galcom_tooltip_no_holdings_4:0 "§YHoldings Limit (4)§! is no longer valid as a Term in Agreements for Overlord Galactic Community members."
- galcom_tooltip_strengthened_specialists:0 "§YBulwarks§! have improved Starbases and Defense Platforms.\n§YScholaria§! have improved §YPlanetary Sensors§!.\n§YProspectoria§! have improved §YResource Discoveries§!."
- galcom_tooltip_ethics_tier_1:0 "Subjects have a §Y25%§! ethics attraction towards their Overlord's Fanatic Ethics."
- galcom_tooltip_ethics_tier_2:0 "Subjects have a §Y50%§! ethics attraction towards their Overlord's Fanatic Ethics."
- galcom_tooltip_ethics_tier_3:0 "Subjects have a §Y75%§! ethics attraction towards their Overlord's Fanatic Ethics."
+ galcom_tooltip_no_independent_sensors:0 "- เงื่อนไขในข้อตกลง §Y$subject_does_not_get_sensors$§! ไม่สามารถใช้ได้อีกต่อไประหว่างสมาชิกประชาคมกาแล็กติก"
+ galcom_tooltip_no_independent_diplomacy:0 "- เงื่อนไขในข้อตกลง §Y$subject_can_do_diplomacy$§! ไม่สามารถใช้ได้อีกต่อไประหว่างสมาชิกประชาคมกาแล็กติก"
+ galcom_tooltip_no_integration_permitted:0 "- เงื่อนไขในข้อตกลง §Y$subject_can_be_integrated$§! ไม่สามารถใช้ได้อีกต่อไประหว่างสมาชิกประชาคมกาแล็กติก"
+ galcom_tooltip_no_expansion_prohibited:0 "- เงื่อนไขในข้อตกลง §Y$subject_cannot_expand$§! ไม่สามารถใช้ได้อีกต่อไประหว่างสมาชิกประชาคมกาแล็กติก"
+ galcom_tooltip_no_expansion_regulated:0 "- เงื่อนไขในข้อตกลง §Y$subject_can_expand_with_tithe$§! ไม่สามารถใช้ได้อีกต่อไประหว่างสมาชิกประชาคมกาแล็กติก"
+ galcom_tooltip_no_limited_diplomacy:0 "- เงื่อนไขในข้อตกลง §Y$subject_can_not_do_diplomacy$§! ไม่สามารถใช้ได้อีกต่อไประหว่างสมาชิกประชาคมกาแล็กติก"
+ galcom_tooltip_no_holdings_3:0 "- เงื่อนไขในข้อตกลง §Yจำกัดการถือครอง (3)§! ไม่สามารถใช้ได้อีกต่อไปสำหรับสมาชิกประชาคมกาแล็กติกที่เป็นเจ้าเหนือหัว"
+ galcom_tooltip_no_holdings_4:0 "- เงื่อนไขในข้อตกลง §Yจำกัดการถือครอง (4)§! ไม่สามารถใช้ได้อีกต่อไปสำหรับสมาชิกประชาคมกาแล็กติกที่เป็นเจ้าเหนือหัว"
+ galcom_tooltip_strengthened_specialists:0 "- บริวารประเภท §Yฐานที่มั่นอวกาศ§! ได้ปรับปรุงฐานอวกาศและแพลตฟอร์มป้องกัน\n- บริวารประเภท §Yการวิจัย/วิชาการ§! ได้ปรับปรุง §Yเซนเซอร์ดาวเคราะห์§!\n- บริวารประเภท §Yเหมืองแร่§! ได้ปรับปรุง §Yการค้นพบทรัพยากร§!"
+ galcom_tooltip_ethics_tier_1:0 "- เมืองขึ้น/บริวารจะถูกแรงดึงดูดทางจริยธรรม §Y25%§! ไปทางจริยธรรม(สุดโต่ง)ของเจ้าเหนือหัว"
+ galcom_tooltip_ethics_tier_2:0 "- เมืองขึ้น/บริวารจะถูกแรงดึงดูดทางจริยธรรม §Y50%§! ไปทางจริยธรรม(สุดโต่ง)ของเจ้าเหนือหัว"
+ galcom_tooltip_ethics_tier_3:0 "- เมืองขึ้น/บริวารจะถูกแรงดึงดูดทางจริยธรรม §Y75%§! ไปทางจริยธรรม(สุดโต่ง)ของเจ้าเหนือหัว"
  galcom_is_subject:0 "เป็นบริวาร"
  galcom_is_overlord:0 "เป็นเจ้าเหนือหัว"
- suzerains_sovereignty:1 "Suzerains and Sovereignty"
+ suzerains_sovereignty:1 "เจ้าผู้ปกครองรัฐอื่นและอำนาจอธิปไตย"
  resolution_category_intergalacticdirective:0 "คำสั่งอินเตอร์กาแล็กติก"
  resolution_category_bureaucraticsurveillance:0 "การตรวจตราดูแลระบบราชการ"
  resolution_intergalacticdirective_regulated_growth:0 "ควบคุมการเติบโต"
@@ -327,7 +327,7 @@
  resolution_bureaucraticsurveillance_administrative_insight_desc:0 "As part of our efforts to simplify galactic bureaucracy, we are enforcing a clearer administrative hierarchy in the senate, particularly between those member states that already have diplomatic agreements in place."
  resolution_bureaucraticsurveillance_borderless_authority:0 "อำนาจไร้พรมแดน"
  resolution_bureaucraticsurveillance_borderless_authority_desc:0 "As part of our continual efforts to simplify its internal bureaucracy, even greater authority will be handed to the stronger members of the senate."
- resolution_bureaucraticsurveillance_personal_oversight:0 "การกำกับดูแลส่วนบุคคล"
+ resolution_bureaucraticsurveillance_personal_oversight:0 "การกำกับดูแลด้วยตนเอง"
  resolution_bureaucraticsurveillance_personal_oversight_desc:0 "While some states have admittedly experienced a degradation of their sovereignty, our efforts to eliminate bureaucratic red tape have vastly improved the efficiency of the senate!"
  resolution_bureaucraticsurveillance_repeal_1:0 "§Rยกเลิก $resolution_bureaucraticsurveillance_administrative_insight$§!"
  resolution_bureaucraticsurveillance_repeal_1_desc:0 "Our focus on eliminating bureaucratic red tape, while successful, has caused several member states to complain that their sovereignty has been compromised. They are now proposing a mandate to restore some of that lost independence."
