--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -667,10 +667,10 @@
  LEADER_COST_FROM_CAP_MULT:1 "$CLASS_WITH_ICON$ เกินเพดานความจุ: $VALUE$"
  LEADER_CAPACITY_SHORT_DESCRIPTION:1 "We can effectively support up to $LEADER_CAP|Y$ $CLASS_PLURAL$. We currently have $LEADER_CAP_USAGE$."
  LEADER_CAPACITY_LONG_DESCRIPTION:1 "§E§Hความจุ$CLASS$§! เกินกำหนดจะทำให้เพิ่มโทษที่รุนแรงมากขึ้นใน §H$UPKEEP$§! และค่า §Hประสบการณ์§! ที่ได้รับ สำหรับ$CLASS_PLURAL$ของคุณทุกคน §Hความจุ$CLASS$§! สามารถเพิ่มได้โดยการปลดล็อก §Hวัฒนธรรม§!, §Hเทคโนโลยี§! หรือโดยการปฏิรูป §Hระบอบการปกครอง§! ของคุณ§!"
- LEADER_CAPACITY_PENALTY_HEADER:1 "§HCurrent Penalties§!"
+ LEADER_CAPACITY_PENALTY_HEADER:1 "§Hโทษในปัจจุบัน§!"
  LEADER_CAPACITY_PENALTY:1 "The upkeep of your $CLASS_PLURAL$ is increased by $UPKEEP$, and $CLASS_PLURAL$ gain $EXPERIENCE$ less experience due to being over your $CLASS$ Capacity."
  not_councilor_warning:0 "$TRIGGER_FAIL$ §Rคุณสมบัติของสภาจะมีผลก็ต่อเมื่อผู้นำได้รับการแต่งตั้งให้ดำรงตำแหน่งในสภาเท่านั้น§!"
- job_traits_on_ruler_warning:1 "$TRIGGER_FAIL$ §RSome effects might be disabled when the Leader is the Empire's Ruler.§!"
+ job_traits_on_ruler_warning:1 "$TRIGGER_FAIL$ §Rเอฟเฟกต์บางอย่างอาจถูกปิดใช้งานเมื่อผู้นำเป็นผู้ปกครองจักรวรรดิ§!"
  leader_trait_adventurous_spirit:0 "จิตวิญญาณของนักผจญภัย"
  leader_trait_adventurous_spirit_desc:1 "This leader has a yearning for adventure and an overt distaste for boardroom politics."
  leader_trait_adventurous_spirit_effect:1 "[GetAdventurousSpiritEffect]"
@@ -1136,9 +1136,9 @@
  leader_trait_spycraft_desc:0 "Some commanders prefer to use more subtle methods by employing spies and informants rather than brute strength."
  leader_trait_spycraft_2:0 "$leader_trait_spycraft$ II"
  leader_trait_spycraft_2_desc:0 "$leader_trait_spycraft_desc$"
- leader_trait_reinforcer:0 "Reinforcer"
+ leader_trait_reinforcer:0 "เสริมกำลังทหาร"
  leader_trait_reinforcer_desc:1 "This leader focuses on building emergency bomb shelters and reinforced bunkers in case of orbital bombardment."
- leader_trait_reinforcer_2:0 "Reinforcer II"
+ leader_trait_reinforcer_2:0 "เสริมกำลังทหาร II"
  leader_trait_reinforcer_desc_2:0 "$leader_trait_reinforcer_desc$"
  leader_trait_ftl_inhibitor:0 "$t$Adds Planetary §YFTL Inhibitor§!"
  leader_trait_guardian:0 "กาเดียน"
