--- a/mod/thmod/localisation/english/paragon_4_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_4_l_english.yml
@@ -407,9 +407,9 @@
  leader_trait_warden_2_hive_desc:0 "$leader_trait_warden_hive_desc$"
  leader_trait_warden_2_machine:0 "$leader_trait_warden_machine$ II"
  leader_trait_warden_2_machine_desc:0 "$leader_trait_warden_machine_desc$"
- leader_trait_reinforcer_hive:0 "Reinforcer"
+ leader_trait_reinforcer_hive:0 "เสริมกำลังทหาร"
  leader_trait_reinforcer_hive_desc:1 "This drone reinforces damaged combat units, focusing on defensive warfare."
- leader_trait_reinforcer_machine:0 "Reinforcer"
+ leader_trait_reinforcer_machine:0 "เสริมกำลังทหาร"
  leader_trait_reinforcer_machine_desc:1 "This unit uses special command protocols to reinforce damaged combat units, focusing on defensive warfare."
  leader_trait_reinforcer_2_hive:0 "$leader_trait_reinforcer_hive$ II"
  leader_trait_reinforcer_2_hive_desc:0 "$leader_trait_reinforcer_hive_desc$"
