--- a/mod/thmod/localisation/english/paragon_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_l_english.yml
@@ -492,7 +492,7 @@
  paragon.550.f:1 "วางแผนจัดขบวนพาเหรดใหญ่"
  paragon.550.g:2 "Set up a foundation in [From.GetHisHer] name."
  paragon.550.h:1 "Keep it traditional."
- paragon.550.i:1 "Launch the deceased into space."
+ paragon.550.i:1 "ส่งผู้เสียชีวิตขึ้นสู่อวกาศ"
  paragon.550.j:0 "Erect an appropriate memorial."
  paragon.550.k:1 "A small commemoration will suffice."
  paragon.550.l:1 "Name a landmark in [From.GetHisHer] honor."
@@ -553,23 +553,23 @@
  paragon.582.a:1 "They must be replaced immediately."
  paragon.582.b:1 "Their loss has been noted."
  paragon.582.c:1 "The odds were stacked against us."
- paragon_death_public_funeral:0 "Public Funeral"
+ paragon_death_public_funeral:0 "งานศพสาธารณะ"
  paragon_death_public_funeral_desc:1 "A great leader has been laid to rest following a public procession, bringing the people closer together."
- paragon_death_private_funeral:0 "Private Funeral"
+ paragon_death_private_funeral:0 "งานศพแบบปิด"
  paragon_death_private_funeral_desc:1 "A great leader has been laid to rest in a private ceremony. The general public have been denied closure for their loss."
- paragon_death_good_tidings:0 "Good Tidings"
+ paragon_death_good_tidings:0 "ข่าวดี"
  paragon_death_good_tidings_desc:1 "The death of our long-serving leader has had the unexpected effect of bringing opposing parties closer. They are willing to work together to fix the mistakes of the deceased."
  paragon_death_pragmatic_approach:0 "Pragmatic Approach"
  paragon_death_pragmatic_approach_desc:1 "The anatomical donation of our late leader has proved itself beneficial, continuing to bolster our academic endeavors."
  paragon_death_harmonious_passing:0 "Harmonious Passing"
  paragon_death_harmonious_passing_desc:0 "As our great leader ascends to a plane of non-existence, we will find comfort and reassurance in each other."
- paragon_death_military_funeral:0 "Military Funeral"
+ paragon_death_military_funeral:0 "ประเพณีและพิธีศพนายทหาร"
  paragon_death_military_funeral_desc:1 "A great leader has been escorted to their final resting place by a military parade, projecting our might to the galaxy."
  paragon_death_foundation_peace:0 "Foundation of Peace"
  paragon_death_foundation_peace_desc:1 "To honor the late great leader, a foundation has been established to bridge the differences between our communities."
  paragon_death_reignited_traditions:0 "Reignited Traditions"
  paragon_death_reignited_traditions_desc:1 "The traditional funeral rites which marked the passing of our late leader have reminded the people of their united past. The event has reminded us of our history, and reconnected us to our old ways."
- paragon_death_to_the_stars:0 "To the Stars"
+ paragon_death_to_the_stars:0 "สู่ดวงดาว"
  paragon_death_to_the_stars_desc:1 "Our late leader has been sent on a new journey. Together, we are inspired to push boundaries, and keep moving forward."
  paragon_death_towering_memorial:0 "Towering Memorial"
  paragon_death_towering_memorial_desc:1 "Our glory is commemorated by a towering monument."
@@ -577,9 +577,9 @@
  paragon_death_name_wall_desc:1 "The name of the great leader has been immortalized alongside the names of all who have served our society."
  paragon_death_landmark_building:0 "Landmark Building"
  paragon_death_landmark_building_desc:0 "A skyscraper bearing the late leader's name looms over the city, advertising their significance to the empire."
- paragon_death_rejuvenation:0 "Rejuvenation"
+ paragon_death_rejuvenation:0 "การฟื้นฟูคืนพลัง"
  paragon_death_rejuvenation_desc:1 "The buried roots of our former leader have sprouted once more, bringing about a new beginning."
- paragon_death_virtual_advisors:1 "Virtual Advisor"
+ paragon_death_virtual_advisors:1 "ที่ปรึกษาเสมือนจริง"
  paragon_death_virtual_advisors_desc:2 "An intelligent hologram, with all the experience of our broken down leader, serves us as a veteran ship advisor."
  paragon_death_the_hive_endures:0 "The Hive Endures"
  paragon_death_the_hive_endures_desc:0 "The hive has lost a valuable drone. They will be replaced."
