--- a/mod/thmod/localisation/english/scripted_loc_l_english.yml
+++ b/mod/thmod/localisation/english/scripted_loc_l_english.yml
@@ -55,16 +55,16 @@
  monsteronship_mach_desc:0 "A savage organic beast has invaded our science ship and is trying to destroy our crew units. They won't last long without assistance from the military!"
  getscientist_machine:0 "science unit"
  getscientist_hive:0 "science drone"
- getscientist_normal:0 "scientist"
+ getscientist_normal:0 "นักวิทยาศาสตร์"
  getscientist_machine_capital:0 "Science Unit"
  getscientist_hive_capital:0 "Science Drone"
- getscientist_normal_capital:0 "Scientist"
+ getscientist_normal_capital:0 "นักวิทยาศาสตร์"
  getscientistplural_machine:0 "science units"
  getscientistplural_hive:0 "science drones"
- getscientistplural_normal:0 "scientists"
+ getscientistplural_normal:0 "นักวิทยาศาสตร์"
  getscientistplural_machine_capital:0 "Science Units"
  getscientistplural_hive_capital:0 "Science Drones"
- getscientistplural_normal_capital:0 "Scientists"
+ getscientistplural_normal_capital:0 "นักวิทยาศาสตร์"
  getengineer_machine:0 "engineering unit"
  getengineer_hive:0 "engineering drone"
  getengineer_normal:0 "engineer"
