--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -263,8 +263,8 @@
  TRIGGER_OPINION_LEVEL_NOT:1 "ระดับเลเวลทัศนคติของ $COUNTRY$ ไม่$COMPARATOR$ $LEVEL|Y$"
  TRIGGER_ENVOY_OPINION_CHANGE:1 "Opinion Change with $COUNTRY$ by Envoys is $COMPARATOR$ $NUM|Y$"
  TRIGGER_ENVOY_OPINION_CHANGE_NOT:1 "Opinion Change with $COUNTRY$ by Envoys is NOT $COMPARATOR$ $NUM|Y$"
- TRIGGER_TRUST:1 "Trust toward $COUNTRY$ is $COMPARATOR$ $NUM|Y$"
- TRIGGER_TRUST_NOT:1 "Trust toward $COUNTRY$ is NOT $COMPARATOR$ $NUM|Y$"
+ TRIGGER_TRUST:1 "ความเชื่อมั่นต่อ $COUNTRY$ $COMPARATOR$ $NUM|Y$"
+ TRIGGER_TRUST_NOT:1 "ความเชื่อมั่นต่อ $COUNTRY$ ไม่$COMPARATOR$ $NUM|Y$"
  HAS_ALLIANCE:0 "มีพันธมิตร"
  HAS_NOT_ALLIANCE:0 "ไม่มีพันธมิตร"
  HAS_FEDERATION:0 "อยู่ในสหพันธ์"
@@ -335,7 +335,7 @@
  VARIABLE_ARITHMETIC_NOT_VALUE:1 "Arithmetic trigger of Variable is NOT $COMPARATOR$ $NUM|Y$"
  ANY_SHIP:0 "Any ship"
  ANY_BORDERING_COUNTRY:0 "Any bordering country"
- ANY_SHIP_IN_SYSTEM:0 "Any ship in system"
+ ANY_SHIP_IN_SYSTEM:0 "ยานใดๆในระบบ"
  ANY_FLEET_IN_ORBIT:0 "Any fleet in orbit"
  ANY_OWNED_SHIP:0 "Any owned ship by a country"
  ANY_OWNED_SHIP_FLEET:0 "Any ship in Fleet"
@@ -923,8 +923,8 @@
  TRIGGER_IS_NOT_BEING_REPAIRED:0 "Is NOT being Repaired"
  HAS_TRAIT:0 "มีคุณลักษณะ $TRAIT|Y$"
  HAS_TRAIT_ICON_TIP:0 "This option is available due to $WHO|H$ having the $TRAIT|Y$ Trait"
- RESOURCE_STOCKPILED_LESS_THAN:2 "$RESOURCE|Y$ §Hstockpile§! ($VAL0|2Y$) must NOT be $COMPARE$ $VAL1|2Y$"
- RESOURCE_STOCKPILED_AT_LEAST:1 "$RESOURCE|Y$ §Hstockpile§! ($VAL0|2Y$) must be $COMPARE$ $VAL1|2Y$"
+ RESOURCE_STOCKPILED_LESS_THAN:2 "$RESOURCE|Y$ §Hในคลัง§! ($VAL0|2Y$) ต้อง ไม่$COMPARE$ $VAL1|2Y$"
+ RESOURCE_STOCKPILED_AT_LEAST:1 "$RESOURCE|Y$ §Hในคลัง§! ($VAL0|2Y$) ต้อง $COMPARE$ $VAL1|2Y$"
  RESOURCE_INCOME_LESS_THAN:2 "§Hรายได้§! $RESOURCE|Y$ ต่อเดือน ($VAL0|2Y$) ต้องไม่ $COMPARE$ $VAL1|2Y$"
  RESOURCE_INCOME_AT_LEAST:1 "§Hรายได้§! $RESOURCE|Y$ ต่อเดือน ($VAL0|2Y$) ต้อง $COMPARE$ $VAL1|2Y$"
  RESOURCE_REVENUE_TRIGGER:0 "§Hรายได้ (ยังไม่หักค่าใช้จ่ายส่วนอื่นๆ)§! $RESOURCE|Y$ ต่อเดือน ($VAL0|2Y$) ต้อง $COMPARE$ $VAL1|2Y$"
@@ -962,8 +962,8 @@
  MAX_NAVAL_CAPACITY_TRIGGER:0 "ความจุของยานรบ $COMPARATOR$ $NUM|Y$"
  MAX_NAVAL_CAPACITY_NOT_TRIGGER:0 "ความจุของยานรบไม่ $COMPARATOR$ $NUM|Y$"
  ENCLAVE_CAPACITY_LEFT_TRIGGER:0 "ความจุกองยานทหารรับจ้าง Enclave $COMPARATOR$ $NUM|Y$."
- COMMAND_LIMIT_TRIGGER:0 "Command Limit is $COMPARATOR$ $NUM|Y$."
- COMMAND_LIMIT_NOT_TRIGGER:0 "Command Limit is NOT $COMPARATOR$ $NUM|Y$."
+ COMMAND_LIMIT_TRIGGER:0 "ขีดจำกัดคำสั่ง $COMPARATOR$ $NUM|Y$"
+ COMMAND_LIMIT_NOT_TRIGGER:0 "ขีดจำกัดคำสั่ง ไม่$COMPARATOR$ $NUM|Y$"
  USED_NAVAL_CAPACITY_PERCENT_TRIGGER:0 "ขนาดกองยานทั้งหมด $COMPARATOR$ $NUM|Y%0$ ของความจุยานรบ"
  USED_NAVAL_CAPACITY_PERCENT_NOT_TRIGGER:0 "ขนาดกองยานทั้งหมดไม่ $COMPARATOR$ $NUM|Y%0$ ของความจุยานรบ"
  USED_NAVAL_CAPACITY_INTEGER_TRIGGER:0 "ขนาดกองยานทั้งหมด $COMPARATOR$ $NUM|Y$"
@@ -1291,7 +1291,7 @@
  CHANGE_GOVERNMENT_AUTHORITY_EFFECT_RANDOM:0 "Change to Random Government Authority"
  CHANGE_GOVERNMENT_CIVICS_EFFECT:0 "เปลี่ยนคุณสมบัติพลเมืองเป็น $CIVICS$"
  CHANGE_GOVERNMENT_CIVICS_EFFECT_RANDOM:0 "Change to Random Government Civics"
- ASSIGN_LEADER_EFFECT:0 "$LEADER$ is assigned as leader"
+ ASSIGN_LEADER_EFFECT:0 "$LEADER$ ถูกแต่งตั้งเป็นผู้นำ"
  UNASSIGN_LEADER_EFFECT:0 "$LEADER$ ถูกปลดจากผู้นำแล้ว"
  SET_YEARS_SERVED_EFFECT:0 "เปลี่ยนอายุงาน(ปี)เพื่อให้ตรงกันกับ $LEADER|Y$"
  EXILE_LEADER_EFFECT:0 "$LEADER$ ถูกเนรเทศ"
@@ -1611,7 +1611,7 @@
  FEDERATION_COHESION_LESS_THAN:1 "$FEDERATION|H$ does NOT have $COMPARE$ $VAL1|2Y$ cohesion"
  FEDERATION_COHESION_AT_LEAST:1 "$FEDERATION|H$ has $COMPARE$ $VAL1|2Y$ cohesion"
  START_SITUATION_EFFECT:0 "Starts Situation: $SITUATION|Y$"
- DESTROY_SITUATION_EFFECT:0 "Concludes Situation: $NAME|Y$"
+ DESTROY_SITUATION_EFFECT:0 "สรุปสถานการณ์: $NAME|Y$"
  ADD_SITUATION_PROGRESS:0 "สถานการณ์ $SITUATION|Y$ ก้าวหน้าไป $AMOUNT|Y$"
  ADD_SITUATION_PROGRESS_NEGATIVE:0 "The $SITUATION|Y$ Situation recedes by $AMOUNT|Y$"
  SET_SITUATION_APPROACH_EFFECT:1 "Situation Approach is set to '$APPROACH|Y$'. This will have the following effects:\n$EFFECTS$"
@@ -1751,7 +1751,7 @@
  effect_every_controlled_planet:0 "Every Controlled Planet"
  count_controlled_planet_trigger:0 "Number of Controlled Planets$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  count_controlled_planet_all_trigger:0 "$IS_ALL_NOT$ Controlled Planets fulfill the following conditions"
- any_galaxy_planet_trigger:0 "Any Planet in the Galaxy"
+ any_galaxy_planet_trigger:0 "มีดาวเคราะห์ในกาแล็กซี"
  effect_random_galaxy_planet:0 "Random Planet in the Galaxy"
  effect_every_galaxy_planet:0 "Every Planet in the Galaxy"
  count_galaxy_planet_trigger:0 "Number of Planets in the Galaxy$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
@@ -1761,7 +1761,7 @@
  effect_every_galaxy_fleet:0 "Every Fleet in the Galaxy"
  count_galaxy_fleet_trigger:0 "Number of Fleets in the Galaxy$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  count_galaxy_fleet_all_trigger:0 "$IS_ALL_NOT$ Fleets in the Galaxy fulfill the following conditions"
- any_ship_in_system_trigger:0 "Any Ship in System"
+ any_ship_in_system_trigger:0 "ยานใดๆในระบบ"
  effect_random_ship_in_system:0 "Random Ship in System"
  effect_every_ship_in_system:0 "Every Ship in System"
  count_ship_in_system_trigger:0 "Number of Attackers$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
@@ -1865,7 +1865,7 @@
  ASSIGN_ESPIONAGE_ASSET:1 "Assign $TYPE|Y$ espionage asset"
  UNASSIGN_ESPIONAGE_ASSET:1 "Unassign $TYPE|Y$ espionage asset"
  SET_POLICY:0 "นโยบาย $POLICY_GROUP|Y$ ตั้งค่าเป็น $OPTION|Y$"
- CAN_SET_POLICY_TRIGGER:0 "Can set Policy on $POLICY_GROUP|Y$ to $OPTION|Y$"
+ CAN_SET_POLICY_TRIGGER:0 "สามารถกำหนดนโยบาย $POLICY_GROUP|Y$ เป็น $OPTION|Y$ ได้"
  CAN_NOT_SET_POLICY_TRIGGER:0 "Cannot set Policy on $POLICY_GROUP|Y$ to $OPTION|Y$"
  CAN_WORK_SPECIFIC_WORK_TYPE_TRIGGER:1 "Can take any $JOB$ job which becomes available."
  CAN_NOT_WORK_SPECIFIC_JOB_TYPE_TRIGGER:1 "Can NOT take any $JOB$ job which becomes available."
@@ -1915,8 +1915,8 @@
  effect_every_orbital_station:0 "Every Orbital Station"
  count_orbital_station_trigger:0 "Number of Orbital Stations$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  count_orbital_station_all_trigger:0 "$IS_ALL_NOT$ Orbital Stations fulfill the following conditions"
- STARBASE_IS_NOT_BUILDING:0 "Starbase is NOT building $COMP|Y$"
- STARBASE_IS_BUILDING:0 "Starbase is building $COMP|Y$"
+ STARBASE_IS_NOT_BUILDING:0 "ฐานอวกาศไม่ได้กำลังสร้าง $COMP|Y$"
+ STARBASE_IS_BUILDING:0 "ฐานอวกาศกำลังสร้าง $COMP|Y$"
  STARBASE_IS_NOT_FIRST_IN_QUEUE:0 "$FIRST|Y$ is NOT in the building queue before $SECOND|Y$"
  STARBASE_IS_FIRST_IN_QUEUE:0 "$FIRST|Y$ อยู่ในคิวการสร้างก่อน $SECOND|Y$"
  HAS_AGREEMENT_BETWEEN_TRIGGER:0 "Agreement between $COUNTRY|Y$ and $TARGET|Y$ exists"
