--- a/mod/thmod/localisation/english/utopia_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_l_english.yml
@@ -67,8 +67,8 @@
  dyson_sphere_5_DESC:0 "A fully operational Dyson Sphere - §G100%§! energy generation efficiency."
  COLONIZATION_IMPOSSIBLE_DYSON_SPHERE: "§R$TRIGGER_FAIL$Cannot colonize due to the §Y$dyson_sphere_5$§! around this system's star§!"
  COLONIZATION_IMPOSSIBLE_DYSON_SPHERE_CONSTRUCTION: "§R$TRIGGER_FAIL$Cannot colonize due to the ongoing §Y$dyson_sphere_5$§! construction§!"
- requires_no_dyson_sphere: "$TRIGGER_FAIL$Cannot construct in the same system as an existing §Y$dyson_sphere_5$§!"
- requires_no_dyson_sphere_construction: "$TRIGGER_FAIL$Cannot construct in the same system as an ongoing §Y$dyson_sphere_5$ construction§!"
+ requires_no_dyson_sphere: "$TRIGGER_FAIL$ไม่สามารถสร้างในระบบเดียวกันกับ §Y$dyson_sphere_5$§! ที่มีอยู่ได้"
+ requires_no_dyson_sphere_construction: "$TRIGGER_FAIL$ไม่สามารถสร้างในระบบเดียวกันกับ §Y$dyson_sphere_5$ construction§! ที่กำลังสร้างอยู่ได้"
  spy_orb_0_MEGASTRUCTURE_DETAILS:1 "ขั้นของ §Y$spy_orb_4$§! จะค่อยๆขยายช่วงเซ็นเซอร์จนในที่สุดก็ครอบคลุมทั้งกาแล็กซี"
  spy_orb_0_CONSTRUCTION_INFO_DELAYED:3 "ขั้นของ $spy_orb_4$ จะค่อยๆขยายช่วงเซ็นเซอร์จนในที่สุดก็ครอบคลุมทั้งกาแล็กซี"
  spy_orb_0:0 "อาร์เรย์สังเกตุการณ์กาแล็กซี (ขั้นที่0:ที่ตั้ง)"
