--- a/mod/thmod/localisation/english/job_concepts_l_english.yml
+++ b/mod/thmod/localisation/english/job_concepts_l_english.yml
@@ -1,32 +1,32 @@
 ﻿l_english:
  concept_technician: "$job_technician_plural$"
- concept_technician_desc: "$job_technician_plural$ produce $i_energy$.\n\n§L$job_technician_desc$§!"
+ concept_technician_desc: "$job_technician_plural$ ผลิต $i_energy$\n\n§L$job_technician_desc$§!"
  concept_farmer: "$job_farmer_plural$"
- concept_farmer_desc: "$job_farmer_plural$ produce $i_food$.\n\n§L$job_farmer_desc$§!"
+ concept_farmer_desc: "$job_farmer_plural$ ผลิต $i_food$\n\n§L$job_farmer_desc$§!"
  concept_miner: "$job_miner_plural$"
- concept_miner_desc: "$job_miner_plural$ produce $i_minerals$.\n\n§L$job_miner_desc$§!"
+ concept_miner_desc: "$job_miner_plural$ ผลิต $i_minerals$\n\n§L$job_miner_desc$§!"
  concept_researcher: "$job_researcher_plural$"
- concept_researcher_desc: "$job_researcher_plural$ turn $i_consumer_goods$ into $i_research$\n\n§L$job_researcher_desc$§!"
+ concept_researcher_desc: "$job_researcher_plural$ เปลี่ยน $i_consumer_goods$ เป็น $i_research$\n\n§L$job_researcher_desc$§!"
  concept_foundry: "$job_foundry_plural$"
- concept_foundry_desc: "$job_foundry_plural$ turn $i_minerals$ into $i_alloys$.\n\n§L$job_foundry_desc$§!"
+ concept_foundry_desc: "$job_foundry_plural$ เปลี่ยน $i_minerals$ เป็น $i_alloys$\n\n§L$job_foundry_desc$§!"
  concept_artisan: "$job_artisan_plural$"
- concept_artisan_desc: "$job_artisan_plural$ turn $i_minerals$ into $i_consumer_goods$.\n\n§L$job_artisan_desc$§!"
+ concept_artisan_desc: "$job_artisan_plural$ เปลี่ยน $i_minerals$ เป็น $i_consumer_goods$\n\n§L$job_artisan_desc$§!"
  concept_soldier: "$job_soldier_plural$"
  concept_soldier_desc: "$job_soldier_plural$ ผลิต $i_naval_capacity$ และ $i_defense_armies$.\n\n§L$job_soldier_desc$§!"
  concept_priest: "$job_priest_plural$"
  concept_priest_desc: "$job_priest_plural$ เปลี่ยน $i_consumer_goods$ เป็น $i_unity$ และ $i_amenities$\n\n§L$job_priest_desc$§!"
  concept_high_priest: "$job_high_priest_plural$"
- concept_high_priest_desc: "$job_high_priest_plural$ turn $i_consumer_goods$ into $i_unity$ and $i_amenities$.\n\n§L$job_high_priest_desc$§!"
+ concept_high_priest_desc: "$job_high_priest_plural$ เปลี่ยน $i_consumer_goods$ เป็น $i_unity$ และ $i_amenities$\n\n§L$job_high_priest_desc$§!"
  concept_haruspex: "$job_haruspex_plural$"
- concept_haruspex_desc: "$job_haruspex_plural$ turn $i_consumer_goods$ into $i_engineering$ and $i_unity$.\n\n§LEvangelical mechanics and surgeons of the divine, rendering unworthy flesh and replacing it with holy cybernetics.§!"
+ concept_haruspex_desc: "$job_haruspex_plural$ เปลี่ยน $i_consumer_goods$ เป็น $i_engineering$ และ $i_unity$\n\n§LEvangelical mechanics and surgeons of the divine, rendering unworthy flesh and replacing it with holy cybernetics.§!"
  concept_technophant: "$job_technophant_plural$"
- concept_technophant_desc: "$job_technophant_plural$ turn $i_consumer_goods$ into $i_engineering$ and $i_unity$.\n\n§LExalted interpreters of divine wetware. They guide the people toward a perfect fusion of flesh and machine.§!"
+ concept_technophant_desc: "$job_technophant_plural$ เปลี่ยน $i_consumer_goods$ เป็น $i_engineering$ และ $i_unity$\n\n§LExalted interpreters of divine wetware. They guide the people toward a perfect fusion of flesh and machine.§!"
  concept_roboticist: "$job_roboticist_plural$"
  concept_roboticist_desc: "$job_roboticist_plural$ เปลี่ยน $i_alloys$ เป็น £pops£ §Iประชากรจักรกล§! (ใหม่)\n\n§L$job_roboticist_desc$§!"
  concept_archaeoengineers: "$job_archaeoengineers_plural$"
- concept_archaeoengineers_desc: "$job_archaeoengineers_plural$ turn $i_consumer_goods$ into $i_research$.\n\n§L$job_archaeoengineers_desc$§!"
+ concept_archaeoengineers_desc: "$job_archaeoengineers_plural$ เปลี่ยน $i_consumer_goods$ เป็น $i_research$\n\n§L$job_archaeoengineers_desc$§!"
  concept_politician: "$job_politician_plural$"
- concept_politician_desc: "$job_politician_plural$ turn $i_consumer_goods$ into $i_unity$ and $i_amenities$.\n\n§L$job_politician_desc$§!"
+ concept_politician_desc: "$job_politician_plural$ เปลี่ยน $i_consumer_goods$ เป็น $i_unity$ และ $i_amenities$\n\n§L$job_politician_desc$§!"
  concept_colonist: "$job_colonist_plural$"
  concept_colonist_desc: "$job_colonist_plural$ ผลิต $i_food$ (หรือ $i_minerals$) และ $i_amenities$ เพิ่มขึ้นเล็กน้อย และวางกำลัง £defense_army£ §Yกองทัพป้องกัน§!\n\n§L$job_colonist_desc$§!"
  concept_overlord_arborist: "$job_overlord_arborist_plural$"
@@ -34,9 +34,9 @@
  concept_replicator: "$job_replicator_plural$"
  concept_replicator_desc: "$job_replicator_plural$ เปลี่ยน $i_alloys$ เป็น £pop£ §Iประชากรเครื่องจักร§! ใหม่\n\n§L$job_replicator_desc$§!"
  concept_spawning_drone: "$job_spawning_drone_plural$"
- concept_spawning_drone_desc: "$job_spawning_drone_plural$ turn $i_food$ (or $i_minerals$) into £mod_planet_amenities_no_happiness_add£ §I$PLANET_AMENITIES_TITLE$§! and £mod_planet_pop_assembly_mult£ §I$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\n§L$job_spawning_drone_desc$§!"
+ concept_spawning_drone_desc: "$job_spawning_drone_plural$ เปลี่ยน $i_food$ (หรือ $i_minerals$) เป็น £mod_planet_amenities_no_happiness_add£ §I$PLANET_AMENITIES_TITLE$§! และ £mod_planet_pop_assembly_mult£ §I$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!\n\n§L$job_spawning_drone_desc$§!"
  concept_offspring_drone: "$job_offspring_drone_plural$"
- concept_offspring_drone_desc: "$job_offspring_drone_plural$ turn $i_food$ (or $i_minerals$) into £mod_planet_amenities_no_happiness_add£ §I$PLANET_AMENITIES_TITLE$§! and £mod_planet_pop_assembly_mult£ §I$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!, spawn §I$offspring_defense_plural$§!, and provide a £mod_planet_jobs_simple_drone_produces_mult£ §G+10%§! increase in §I$pop_cat_simple_drone$ output§!.\n\n§L$job_offspring_drone_desc$§!"
+ concept_offspring_drone_desc: "$job_offspring_drone_plural$ เปลี่ยน $i_food$ (หรือ $i_minerals$) เป็น £mod_planet_amenities_no_happiness_add£ §I$PLANET_AMENITIES_TITLE$§! และ £mod_planet_pop_assembly_mult£ §I$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!, เกิด §I$offspring_defense_plural$§! ขึ้น, และให้ £mod_planet_jobs_simple_drone_produces_mult£ §G+10%§! เพิ่ม §I ผลผลิตของ $pop_cat_simple_drone$§!\n\n§L$job_offspring_drone_desc$§!"
  concept_offspring_feeder: "$job_overlord_offspring_drone_feeder_plural$"
  concept_offspring_feeder_desc: "$job_overlord_offspring_drone_feeder_plural$ ใช้ $i_food$ (หรือ $i_minerals$) สามารถการเข้าถึง §I$offspring_defense_plural$§! และ เพิ่มใน £mod_planet_jobs_worker_produces_mult£ §Iผลผลิตที่เป็นทรัพยากรจากประชากรคนงาน§!\n\n§L$job_overlord_offspring_drone_feeder_desc$§!"
  concept_squire: "$job_squire_plural$"
@@ -48,44 +48,44 @@
  concept_overlord_knight: "$job_overlord_knight_plural$"
  concept_overlord_knight_desc: "£job_knight£ $job_overlord_knight_plural$ turn $i_alloys$ into $i_stability$ and spawn $i_defense_armies$ for the Subject, and $i_unity$ and $i_research$ for the Overlord.\nCompleting §YKnightly Quests§! can further improve their output.\n\n§L$job_overlord_knight_desc$§!"
  concept_healthcare: "$job_healthcare_plural$"
- concept_healthcare_desc: "$job_healthcare_plural$ turn $i_consumer_goods$ into $i_amenities$, £mod_pop_growth_speed£ §I$MOD_POP_GROWTH_SPEED$§!, £mod_planet_pop_assembly_organic_mult£ §I$MOD_PLANET_POP_ASSEMBLY_ORGANIC_MULT$§! and increase £mod_pop_environment_tolerance£ §IPlanet Habitability§!.\n\n§L$job_healthcare_desc$§!"
+ concept_healthcare_desc: "$job_healthcare_plural$ เปลี่ยน $i_consumer_goods$ เป็น $i_amenities$, £mod_pop_growth_speed£ §I$MOD_POP_GROWTH_SPEED$§!, £mod_planet_pop_assembly_organic_mult£ §I$MOD_PLANET_POP_ASSEMBLY_ORGANIC_MULT$§! และเพิ่ม £mod_pop_environment_tolerance£ §Iการอยู่อาศัยได้ของดาวเคราะห์§!\n\n§L$job_healthcare_desc$§!"
  concept_bureaucrat: "$job_bureaucrat_plural$"
- concept_bureaucrat_desc: "$job_bureaucrat_plural$ turn $i_consumer_goods$ into $i_unity$.\n\n§L$job_bureaucrat_desc$§!"
+ concept_bureaucrat_desc: "$job_bureaucrat_plural$ เปลี่ยน $i_consumer_goods$ เป็น $i_unity$\n\n§L$job_bureaucrat_desc$§!"
  concept_clerk: "$job_clerk_plural$"
- concept_clerk_desc: "$job_clerk_plural$ produce $i_trade_value$ and $i_amenities$.\n\n§L$job_clerk_desc$§!"
+ concept_clerk_desc: "$job_clerk_plural$ ผลิต $i_trade_value$ และ $i_amenities$\n\n§L$job_clerk_desc$§!"
  concept_unifier: "$job_unifier_plural$"
- concept_unifier_desc: "$job_unifier_plural$ turn $i_consumer_goods$ and $i_food$ (or $i_minerals$) into $i_unity$ and $i_amenities$.\n\n§L$job_unifier_desc$§!"
+ concept_unifier_desc: "$job_unifier_plural$ เปลี่ยน $i_consumer_goods$ และ $i_food$ (หรือ $i_minerals$) เป็น $i_unity$ และ $i_amenities$\n\n§L$job_unifier_desc$§!"
  concept_broken_shackles_scavenger: "$job_broken_shackles_scavenger_plural$"
  concept_broken_shackles_scavenger_desc: "$job_broken_shackles_scavenger_plural$ produce small amounts of $i_alloys$, $i_amenities$, and $i_research$.\n\n§L$job_broken_shackles_scavenger_desc$§!"
  concept_low_tech_laborer: "$job_low_tech_laborer_plural$"
- concept_low_tech_laborer_desc: "$job_low_tech_laborer_plural$ turn $i_minerals$ into $i_consumer_goods$ and $i_alloys$\n\n§L$job_low_tech_laborer_desc$§!"
+ concept_low_tech_laborer_desc: "$job_low_tech_laborer_plural$ เปลี่ยน $i_minerals$ เป็น $i_consumer_goods$ และ $i_alloys$\n\n§L$job_low_tech_laborer_desc$§!"
  concept_low_tech_miner: "$job_low_tech_miner_plural$"
- concept_low_tech_miner_desc: "$job_low_tech_miner_plural$ produce $i_minerals$\n\n§L$job_low_tech_miner_desc$§!"
+ concept_low_tech_miner_desc: "$job_low_tech_miner_plural$ ผลิต $i_minerals$\n\n§L$job_low_tech_miner_desc$§!"
  concept_low_tech_technician: "$job_low_tech_technician_plural$"
- concept_low_tech_technician_desc: "$job_low_tech_technician_plural$ produce $i_energy$\n\n§L$job_low_tech_technician_desc$§!"
+ concept_low_tech_technician_desc: "$job_low_tech_technician_plural$ ผลิต $i_energy$\n\n§L$job_low_tech_technician_desc$§!"
  concept_low_tech_farmer: "$job_low_tech_farmer_plural$"
- concept_low_tech_farmer_desc: "$job_low_tech_farmer_plural$ produce $i_food$\n\n§L$job_low_tech_farmer_desc$§!"
+ concept_low_tech_farmer_desc: "$job_low_tech_farmer_plural$ ผลิต $i_food$\n\n§L$job_low_tech_farmer_desc$§!"
  concept_low_tech_researcher: "$job_low_tech_researcher_plural$"
- concept_low_tech_researcher_desc: "$job_low_tech_researcher_plural$ turn $i_consumer_goods$ into $i_research$\n\n§L$job_low_tech_researcher_desc$§!"
+ concept_low_tech_researcher_desc: "$job_low_tech_researcher_plural$ เปลี่ยน $i_consumer_goods$ เป็น $i_research$\n\n§L$job_low_tech_researcher_desc$§!"
  concept_low_tech_bureaucrat: "$job_low_tech_bureaucrat_plural$"
  concept_low_tech_bureaucrat_desc: "$job_low_tech_bureaucrat_plural$ เปลี่ยน $i_consumer_goods$ เป็น $i_unity$\n\n§L$job_low_tech_bureaucrat_desc$§!"
  concept_low_tech_warrior: "$job_low_tech_warrior_plural$"
  concept_low_tech_warrior_desc: "$job_low_tech_warrior_plural$ decrease £crime£ §I$PLANET_CRIME_TITLE$§! and spawn £defense_army£ §IDefense Armies§!\n\n§L$job_low_tech_warrior_desc$§!"
  concept_entertainer: "$job_entertainer_plural$"
- concept_entertainer_desc: "$job_entertainer_plural$ turn $i_consumer_goods$ into $i_unity$ and $i_amenities$.\n\n§L$job_entertainer_desc$§!"
+ concept_entertainer_desc: "$job_entertainer_plural$ เปลี่ยน $i_consumer_goods$ เป็น $i_unity$ และ $i_amenities$\n\n§L$job_entertainer_desc$§!"
  concept_wrangler: "$job_wrangler_plural$"
- concept_wrangler_desc: "$job_wrangler_plural$ turn $i_consumer_goods$ into $i_unity$, $i_amenities$ and $i_society$.\n\n$job_wrangler_plural$' effects vary depending on the Empire's ethics.\n\n§L$job_wrangler_desc$§!"
+ concept_wrangler_desc: "$job_wrangler_plural$ เปลี่ยน $i_consumer_goods$ เป็น $i_unity$, $i_amenities$ และ $i_society$\n\nผลของ $job_wrangler_plural$ จะแตกต่างกันขึ้นอยู่กับจริยธรรมของจักรวรรดิ\n\n§L$job_wrangler_desc$§!"
  concept_rancher: "$job_rancher_plural$"
- concept_rancher_desc: "$job_rancher_plural$ turn $i_consumer_goods$ into $i_unity$, $i_amenities$ and $i_society$.\n\n$job_rancher_plural$' effects vary depending on the Empire's ethics.\n\n§L$job_rancher_desc$§!"
+ concept_rancher_desc: "$job_rancher_plural$ เปลี่ยน $i_consumer_goods$ เป็น $i_unity$, $i_amenities$ และ $i_society$\n\nผลของ $job_rancher_plural$ จะแตกต่างกันขึ้นอยู่กับจริยธรรมของจักรวรรดิ\n\n§L$job_rancher_desc$§!"
  concept_trophy_hunter: "$job_trophy_hunter_plural$"
- concept_trophy_hunter_desc: "$job_trophy_hunter_plural$ turn $i_consumer_goods$ into $i_unity$, $i_food$, $i_amenities$ and $i_society$.\n\n$job_trophy_hunter_plural$' effects vary depending on the Empire's ethics.\n\n§L$job_trophy_hunter_desc$§!"
+ concept_trophy_hunter_desc: "$job_trophy_hunter_plural$ เปลี่ยน $i_consumer_goods$ เป็น $i_unity$, $i_food$, $i_amenities$ และ $i_society$\n\nผลของ $job_trophy_hunter_plural$ จะแตกต่างกันขึ้นอยู่กับจริยธรรมของจักรวรรดิ\n\n§L$job_trophy_hunter_desc$§!"
  concept_animal_handler: "$job_animal_handler_plural$"
- concept_animal_handler_desc: "$job_animal_handler_plural$ turn $i_consumer_goods$ into $i_unity$, $i_amenities$ and $i_society$.\n\n$job_animal_handler_plural$' effects vary depending on the Empire's ethics.\n\n§L$job_animal_handler_desc$§!"
+ concept_animal_handler_desc: "$job_animal_handler_plural$ เปลี่ยน $i_consumer_goods$ เป็น $i_unity$, $i_amenities$ และ $i_society$\n\nผลของ $job_animal_handler_plural$ จะแตกต่างกันขึ้นอยู่กับจริยธรรมของจักรวรรดิ\n\n§L$job_animal_handler_desc$§!"
  concept_beastfighter: "$job_beastfighter_plural$"
- concept_beastfighter_desc: "$job_beastfighter_plural$ turn $i_alloys$ and $i_consumer_goods$ or $i_minerals$ into $i_unity$, $i_amenities$ and $i_society$.\n\n$job_beastfighter_plural$' effects vary depending on the Empire's ethics.\n\n§L$job_beastfighter_desc$§!"
+ concept_beastfighter_desc: "$job_beastfighter_plural$ เปลี่ยน $i_alloys$ และ $i_consumer_goods$ หรือ $i_minerals$ เป็น $i_unity$, $i_amenities$ และ $i_society$\n\nผลของ $job_beastfighter_plural$ จะแตกต่างกันขึ้นอยู่กับจริยธรรมของจักรวรรดิ\n\n§L$job_beastfighter_desc$§!"
  concept_drone_wrangler: "$job_drone_wrangler_plural$"
- concept_drone_wrangler_desc: "$job_drone_wrangler_plural$ turn $i_minerals$ into $i_unity$, $i_amenities$ and $i_society$.\n\n$job_drone_wrangler_plural$' effects vary depending on the Empire's ethics.\n\n§L$job_drone_wrangler_desc$§!"
+ concept_drone_wrangler_desc: "$job_drone_wrangler_plural$ เปลี่ยน $i_minerals$ เป็น $i_unity$, $i_amenities$ และ $i_society$\n\nผลของ $job_drone_wrangler_plural$ จะแตกต่างกันขึ้นอยู่กับจริยธรรมของจักรวรรดิ\n\n§L$job_drone_wrangler_desc$§!"
  concept_hunter_drone: "$job_hunter_drone_plural$"
- concept_hunter_drone_desc: "$job_hunter_drone_plural$ turn $i_minerals$ into $i_unity$, $i_food$, $i_amenities$ and $i_society$.\n\n$job_hunter_drone_plural$' effects vary depending on the Empire's ethics.\n\n§L$job_hunter_drone_desc$§!"
+ concept_hunter_drone_desc: "$job_hunter_drone_plural$ เปลี่ยน $i_minerals$ เป็น $i_unity$, $i_food$, $i_amenities$ และ $i_society$\n\nผลของ $job_hunter_drone_plural$ จะแตกต่างกันขึ้นอยู่กับจริยธรรมของจักรวรรดิ\n\n§L$job_hunter_drone_desc$§!"
  concept_symbiosis_integrator: "$job_symbiosis_integrator_plural$"
- concept_symbiosis_integrator_desc: "$job_symbiosis_integrator_plural$ turn $i_minerals$ into $i_unity$, $i_amenities$ and $i_society$.\n\n$job_symbiosis_integrator_plural$' effects vary depending on the Empire's ethics.\n\n§L$job_symbiosis_integrator_desc$§!"
+ concept_symbiosis_integrator_desc: "$job_symbiosis_integrator_plural$ เปลี่ยน $i_minerals$ เป็น $i_unity$, $i_amenities$ และ $i_society$\n\nผลของ $job_symbiosis_integrator_plural$ จะแตกต่างกันขึ้นอยู่กับจริยธรรมของจักรวรรดิ\n\n§L$job_symbiosis_integrator_desc$§!"
